--- a/SoftwareEngineering/校园学习-计算机组成原理/海明校验.md
+++ b/SoftwareEngineering/校园学习-计算机组成原理/海明校验.md
@@ -1,3 +1,10 @@
+- 海明定义 理解码距概念
+- 海明公式  2^k-1>=n+k
+  - n 表示原数据位数
+  - k 表示校验位数
+- 海明举例 存0100011
+- [b站视频](https://www.bilibili.com/video/BV1wJ411B7jX/?spm_id_from=333.788.videocard.0)
+
 ***海明校验码定义\***
 
 海明码（Hamming Code）是利用奇偶性来检错和纠错的校验方法。
