--- a/SoftwareEngineering/校园学习-软件工程/Test/软件工程期末试卷.md
+++ b/SoftwareEngineering/校园学习-软件工程/Test/软件工程期末试卷.md
@@ -2,109 +2,107 @@ https://www.cnblogs.com/qyf2199/p/12104922.html
 
 **单项选择题**
 
-1.瀑布模型的存在问题是（ B ）
+1. 数据耦合、公共耦合、标记耦合、控制耦合的耦合性从低到高的顺序是（ B  ）
 
-  A．用户容易参与开发     B．缺乏灵活性
+   A.数据、公共、标记、控制      **B.数据、标记、控制、公共**
 
-  C．用户与开发者易沟通    D．适用可变需求
+   C.控制、数据、标记、公共      D.控制、数据、公共、标记
 
-2.开发软件所需高成本和产品的低质量之间有着尖锐的矛盾，这种现象称做(  C )
+4. 在SD方法中全面指导模块划分的最重要的原则是( D  )
 
- A.软件工程                B.软件周期
+    A.程序模块化               B.模块高内聚
 
- C.软件危机                D.软件产生
+    C.模块低耦合               **D.模块独立性**
 
-3.数据耦合、公共耦合、标记耦合、控制耦合的耦合性从低到高的顺序是（ B  ）
+5. 软件测试的目的是（ B  ）。
 
-A.数据、公共、标记、控制      B.数据、标记、控制、公共
+   A． 评价软件的质量           **B. 发现软件的错误**
 
-C.控制、数据、标记、公共      D.控制、数据、公共、标记
+   C． 找出软件的所有错误         D. 证明软件是正确的
 
-4.在SD方法中全面指导模块划分的最重要的原则是( D  )
+6. 在设计测试用例时，（ A  ）是用得最多的一种黑盒测试方法。
 
- A.程序模块化               B.模块高内聚
+   ​	**A． 等价类划分**  B. 边界值分析   C. 因果图    D. 判定表
 
- C.模块低耦合               D.模块独立性
+7. 需求分析最终结果是产生( B )。
 
-5．软件测试的目的是（ B  ）。
+   A. 项目开发计划       **B. 需求规格说明书**
 
-A． 评价软件的质量           B. 发现软件的错误
+   C. 设计说明书       D. 可行性分析报告
 
-C． 找出软件的所有错误         D. 证明软件是正确的
+8. Jackson图中，模块框之间若有直线连接，表示它们之间存在(B )。
 
-6．在设计测试用例时，（ A  ）是用得最多的一种黑盒测试方法。
+   A. 调用关系  **B. 组成关系**   C. 链接关系     D. 顺序执行关系
 
-A． 等价类划分  B. 边界值分析   C. 因果图    D. 判定表
+9. 软件详细设计的主要任务是确定每个模块的( C )。
 
-\7. 需求分析最终结果是产生( B )。
+   A. 功能    B. 外部接口 **C. 算法和使用的数据结构**   D. 编程
 
-A. 项目开发计划       B. 需求规格说明书
+10. 为了提高软件的可维护性，在编码阶段应注意（  D ）
 
-C. 设计说明书       D. 可行性分析报告
+    A.保存测试用例和数据             B.提高模块的独立性
 
-\8. Jackson图中，模块框之间若有直线连接，表示它们之间存在(B )。
+    C.文档的副作用                   **D.养成好的程序设计风格**
 
-A. 调用关系  B. 组成关系   C. 链接关系     D. 顺序执行关系
+11. 设年利率为i，现存入p元，若计复利，n年后可得钱数为（B）
 
-\9. 软件详细设计的主要任务是确定每个模块的( C )。
+    A．p﹡(1+i﹡n)                    ***B．p﹡(i+1)n***
 
-A. 功能    B. 外部接口 C. 算法和使用的数据结构   D. 编程
+    C．p﹡(1+i)﹡n                    D．p﹡(i+n)
 
-10．为了提高软件的可维护性，在编码阶段应注意（  D ）
+12. 在考察系统的一些涉及时序和改变的状态时，要用动态模型来表示。动态模型着重于系统的控制逻辑，它包括两个图：一个是事件追踪图，另一个是（ A   ）。
 
-A.保存测试用例和数据             B.提高模块的独立性
+    **A ．状态图**   B. 数据流图  C. 系统结构图 D. 时序图
 
-C.文档的副作用                   D.养成好的程序设计风格
+13.  对象实现了数据和操作的结合，使数据和操作( C  )于对象的统一体中。
 
-11．设年利率为i，现存入p元，若计复利，n年后可得钱数为（B）
+    A. 结合     B. 隐藏     **C. 封装**      D. 抽象
 
-A．p﹡(1+i﹡n)                    B．p﹡(i+1)n
+14. 软件详细设计的主要任务是确定每个模块的( A )。
 
-C．p﹡(1+i)﹡n                    D．p﹡(i+n)
+    **A. 算法和使用的数据结构**    B. 外部接口 C. 功能    D. 编程
 
-12．在考察系统的一些涉及时序和改变的状态时，要用动态模型来表示。动态模型着重于系统的控制逻辑，它包括两个图：一个是事件追踪图，另一个是（ A   ）。
+15. 软件结构图中，模块框之间若有直线连接，表示它们之间存在( A )。
 
-A ．状态图   B. 数据流图  C. 系统结构图 D. 时序图
+    **A. 调用关系**  B. 组成关系   C. 链接关系  D. 顺序执行关系
 
-\13. 对象实现了数据和操作的结合，使数据和操作( C  )于对象的统一体中。
+16. 需求分析最终结果是产生( B )。
 
-A. 结合     B. 隐藏     C. 封装      D. 抽象
+    A. 项目开发计划        **B. 需求规格说明书**
 
-\14. 软件详细设计的主要任务是确定每个模块的( A )。
+    C. 设计说明书         D. 可行性分析报告
 
-A. 算法和使用的数据结构    B. 外部接口 C. 功能    D. 编程
+17. 在详细设计阶段，经常采用的工具有( A  )。
 
-\15. 软件结构图中，模块框之间若有直线连接，表示它们之间存在( A )。
+    **A. PAD**      B. SA      C. SC      D. DFD
 
-A. 调用关系  B. 组成关系   C. 链接关系  D. 顺序执行关系
+18. 因计算机硬件和软件环境的变化而作出的修改软件的过程称为( C  )
 
-\16. 需求分析最终结果是产生( B )。
+     A.教正性维护                       B.适应性维护
 
-A. 项目开发计划        B. 需求规格说明书
+     **C.完善性维护**                       D.预防性维护
 
-C. 设计说明书         D. 可行性分析报告
+20. 为了提高软件的可维护性，在编码阶段应注意（  D  ）
 
-\17. 在详细设计阶段，经常采用的工具有( A  )。
+    A.保存测试用例和数据              B.提高模块的独立性
 
-A. PAD      B. SA      C. SC      D. DFD
-
-18.因计算机硬件和软件环境的变化而作出的修改软件的过程称为( C  )
-
- A.教正性维护                       B.适应性维护
-
- C.完善性维护                       D.预防性维护
-
-20．为了提高软件的可维护性，在编码阶段应注意（  D  ）
-
-A.保存测试用例和数据              B.提高模块的独立性
-
-C.文档的副作用                   D.养成好的程序设计风格
+    C.文档的副作用                   **D.养成好的程序设计风格**
 
  
 
 1．面向对象开发方法包括OOA、OOD和OOP三部分。
 
-2．效益分有形效益和无形效益两种。有形效益可用纯收入、货币时间的价值、投资回收期等指标进行度量；无形效益主要从性质上、心理上进行衡量，很难直接进行量的比较。
+OOA
+
+OOD
+
+OPP
+
+2．效益分有形效益和无形效益两种。
+
+有形效益可用纯收入、货币时间的价值、投资回收期等指标进行度量；
+
+无形效益主要从性质上、心理上进行衡量，很难直接进行量的比较。
 
 3.从应用特点的角度来看，我们可以把高级语言分为基础语言、结构语言和专用语言三类。
 
@@ -202,25 +200,34 @@ A,单元测试 B,组装测试 C,内核测试 D,法律验证 E,确认测试
 2、请举例说明什么是多态,什么是重载
 答案:多态性是指子类对象可以像父类对象那样使用,同样的消息既可以发送给父类对象也可以发送给子类对象.也就是说,在类等级的不同层次中可以共享(公用)一个行为(方法)的名字,然而不同层次中的每个类却各自按自己的需要来实现这个行为.当对象接收到发送给它的消息时,根据该对象所属于的类动态选用在该类中定义的实现算法.
 3、重载是指一个类中有多个同名的方法,但在操作数个数或类型上有区别.
-例: public class A{
-int age;
-String name;
-public void setValue(int i) {
-age=i; }
-public void setValue(String s) {
-name=s; }
+例: 
+
+```
+public class A{
+	int age;
+	String name;
+    public void setValue(int i) {
+        age=i; 
+    }
+    public void setValue(String s) {
+        name=s; 
+    }
+}
+```
+
+
+
 4、什么是数据字典 简述数据字典与数据流图的关系.
-答案:数据字典是关于数据的信息的集合,对数据流程图中的各个元素做完整的定义与说明,是数据流程图的补充工具.(2分)数据流图和数据字典共同构成系统的逻辑模型,没有数据字典数据流图就不严格,然而没有数据流图数据字典也难于发挥作用. 数据流图和对数据流图中每个元素的精确定义放在一起,才能共同构成系统的规格说明.(3分)
+答案:数据字典是关于数据的**信息的集合**,对数据流程图中的各个元素做完整的定义与说明,是数据流程图的补充工具.(2分)数据流图和数据字典共同构成系统的逻辑模型,没有数据字典数据流图就不严格,然而没有数据流图数据字典也难于发挥作用. 数据流图和对数据流图中每个元素的精确定义放在一起,才能共同构成系统的规格说明.(3分)
+
 5、简述编码风格的重要性.
 答案:阅读程序是软件开发和维护过程中的一个重要组成部分,程序实际上也是一种供人阅读的文章.应当在编写程序时讲求程序的风格,这将大量地减少人们读程序的时间.良好的编码风格有助于编写出可靠而又容易维护的程序,编码的风格在很大程度上决定着程序的质量.
+
 面向对象的测试和传统开发方法的测试有什么不同
+
 答案:(1)二者都可以分成四个阶段进行.但传统测试最小单元是模块,而在面向对象环境下,最小的可测试的单元是封装了的类或对象,而不是程序模块.(2)因为面向对象软件没有一个层次的控制结构,所以传统的自顶向下和自底向上的组装策略意义不大. 每次将一个操作组装到类中(像传统的增殖式组装那样)常常行不通,因为在构成类的各个部件之间存在各种直接的和非直接的交互.对于面向对象系统的组装测试,存在两种不同的测试策略.
 
 
-
- 
-
- 
 
 **软件工程期末试卷（三）**
 
@@ -284,33 +291,33 @@ name=s; }
 
 1. 系统流程图是描绘（  ）的传统工具。
 
-​    A、逻辑系统   B、数据结构   C、状态变迁   D、物理系统
+   ​    A、逻辑系统   B、数据结构   C、状态变迁   **D、物理系统**
 
-1. 下列模块独立性最强的是（  ）
+2. 下列模块独立性最强的是（  ）
 
-​    A、非直接耦合  B、数据耦合  C、公共耦合  D、内容耦合
+   ​    **A、非直接耦合**  B、数据耦合  C、公共耦合  D、内容耦合
 
-1. 下列哪个阶段不属于软件生存周期的三大阶段（  ）。
+3. 下列哪个阶段不属于软件生存周期的三大阶段（  ）。
 
-  A、计划阶段           B、开发阶段
+     A、计划阶段           B、开发阶段
 
-  C、编码阶段           D、维护阶段
+     **C、编码阶段**           D、维护阶段
 
-1. 常见的软件概要设计方法有3大类，其中以数据流图为基础构造模块结构的是（  ）。
+4. 常见的软件概要设计方法有3大类，其中以数据流图为基础构造模块结构的是（  ）。
 
-A、  Jackson方法和LCP（Wanier）逻辑构造方法
+   **A、  Jackson方法和LCP（Wanier）逻辑构造方法**
 
-B、 结构化设计方法（SD）
+   B、 结构化设计方法（SD）
 
-C、 面向对象设计方法（OOD）
+   C、 面向对象设计方法（OOD）
 
-D、快速原型法
+   D、快速原型法
 
-1. 使用白盒测试方法时，确定测试数据应根据（  ）和指定的覆盖标准。
+5. 使用白盒测试方法时，确定测试数据应根据（  ）和指定的覆盖标准。
 
-A、程序的内部逻辑           B、程序的复杂程度
+   **A、程序的内部逻辑**           B、程序的复杂程度
 
-C、该软件的编辑人员          D、程序的功能
+   C、该软件的编辑人员          D、程序的功能
 
 答：1、D 2、A  3、C  4、A  5、A
 
@@ -318,37 +325,37 @@ C、该软件的编辑人员          D、程序的功能
 
 1. （  ）可以作为模块。
 
- A、子程序    B、函数    C、过程    D、编译文件
+    **A、子程序    B、函数    C、过程    D、编译文件**
 
-1. 关于内容耦合的描述正确的是（  ）。
+2. 关于内容耦合的描述正确的是（  ）。
 
-A、 内容耦合是最高程度的耦合
+   A、 内容耦合是最高程度的耦合
 
-B、 高级语言一般设计成允许内容耦合的形成
+   B、 高级语言一般设计成允许内容耦合的形成
 
-C、 应该尽量使用内容耦合
+   C、 应该尽量使用内容耦合
 
-D、 如果一个模块可以直接调用另一模块，则可以称为内容耦合
+   D、 如果一个模块可以直接调用另一模块，则可以称为内容耦合
 
-1. 下列属于度量效益方法的是（  ）。
+3. 下列属于度量效益方法的是（  ）。
 
-A、货币的时间价值       B、投资回收期
+   A、货币的时间价值       B、投资回收期
 
-B、收入            D、投资回报率
+   B、收入            D、投资回报率
 
-1. 软件维护的策略包括（   ）。
+4. 软件维护的策略包括（   ）。
 
-A、 定期检测维护
+   A、 定期检测维护
 
-B、 改正性维护
+   B、 改正性维护
 
-C、 适应性维护
+   C、 适应性维护
 
-D、 完善性维护
+   D、 完善性维护
 
-1. 下列不属于软件测试过程的是（   ）。
+5. 下列不属于软件测试过程的是（   ）。
 
-A、单元测试   B、组装测试    C、内核测试   D、法律验证
+   A、单元测试   B、组装测试    C、内核测试   D、法律验证
 
 答：1、ABCD  2、AD  3、ABC  4、BCD 5、CD
 
@@ -1187,131 +1194,131 @@ A、 分析阶段 B、 设计阶段 C、 编码阶段 D、 测试阶段
 
 **选择**
 
-1.开发软件所需高成本和产品的低质量之间有着尖锐的矛盾，这种现象称做(C)
+1. 开发软件所需高成本和产品的低质量之间有着尖锐的矛盾，这种现象称做(C)
 
- A.软件工程                            B.软件周期
+    A.软件工程                            B.软件周期
 
- C.软件危机                            D.软件产生
+    C.软件危机                            D.软件产生
 
-2.研究开发所需要的成本和资源是属于可行性研究中的(B)研究的一方面。
+2. 研究开发所需要的成本和资源是属于可行性研究中的(B)研究的一方面。
 
- A.技术可行性                          B.经济可行性
+    A.技术可行性                          B.经济可行性
 
- C.社会可行性                          D.法律可行性
+    C.社会可行性                          D.法律可行性
 
-\3. 下列属于用白盒技术设计测试用例的是（B）
+3. 下列属于用白盒技术设计测试用例的是（B）
 
-A．错误推测                         B．逻辑覆盖
+   A．错误推测                         B．逻辑覆盖
 
-C．等价类划分                        D．因果图
+   C．等价类划分                        D．因果图
 
-4.模块的内聚性最高的是( D)
+4. 模块的内聚性最高的是( D)
 
- A.逻辑内聚                            B.时间内聚
+    A.逻辑内聚                            B.时间内聚
 
- C.偶然内聚                            D.功能内聚
+    C.偶然内聚                            D.功能内聚
 
-5.在SD方法中全面指导模块划分的最重要的原则是(D)
+5. 在SD方法中全面指导模块划分的最重要的原则是(D)
 
- A.程序模块化                          B.模块高内聚
+    A.程序模块化                          B.模块高内聚
 
- C.模块低耦合                          D.模块独立性
+    C.模块低耦合                          D.模块独立性
 
-6.软件详细设计主要采用的方法是(D)
+6. 软件详细设计主要采用的方法是(D)
 
- A.模块设计                            B.结构化设计
+    A.模块设计                            B.结构化设计
 
- C.PDL语言                            D.结构化程序设计
+    C.PDL语言                            D.结构化程序设计
 
-\7. 根据对软件开发机构调查的结果可知，各类维护活动所占的比重是（A）
+7. 根据对软件开发机构调查的结果可知，各类维护活动所占的比重是（A）
 
-A．完善性占50％，适应性占25％，校正性占21％，其他维护占4％
+   A．完善性占50％，适应性占25％，校正性占21％，其他维护占4％
 
-B．完善性占25％，适应性占50％，校正性占21％，其他维护占4％
+   B．完善性占25％，适应性占50％，校正性占21％，其他维护占4％
 
-C．完善性占21％，适应性占25％，校正性占50％，其他维护占4％
+   C．完善性占21％，适应性占25％，校正性占50％，其他维护占4％
 
-D．完善性占21％，适应性占50％，校正性占25％，其他维护占4％
+   D．完善性占21％，适应性占50％，校正性占25％，其他维护占4％
 
-8.不适合作为科学工程计算的语言是(D)
+8. 不适合作为科学工程计算的语言是(D)
 
- A. Pascal                              B. C
+    A. Pascal                              B. C
 
- C. Fortran                              D. Prolog
+    C. Fortran                              D. Prolog
 
-9.黑盒测试在设计测试用例时，主要需要研究(A)
+9. 黑盒测试在设计测试用例时，主要需要研究(A)
 
- A.需求规格说明与概要设计说明            B.详细设计说明
+    A.需求规格说明与概要设计说明            B.详细设计说明
 
- C.项目开发计划                         D.概要设计说明与详细设计说明
+    C.项目开发计划                         D.概要设计说明与详细设计说明
 
-10.若有一个计算类型的程序，它的输入量只有一个X，其范围是［-1.0，1.0］，现从输入的角度考虑一组测试用例：-1.001，-1.0，1.0，1.001。设计这组测试用例的方法是(C)
+10. 若有一个计算类型的程序，它的输入量只有一个X，其范围是［-1.0，1.0］，现从输入的角度考虑一组测试用例：-1.001，-1.0，1.0，1.001。设计这组测试用例的方法是(C)
 
- A.条件覆盖法                          B.等价分类法
+     A.条件覆盖法                          B.等价分类法
 
- C.边界值分析法                         D.错误推测法
+     C.边界值分析法                         D.错误推测法
 
-11.下列属于维护阶段的文档是(B)
+11. 下列属于维护阶段的文档是(B)
 
- A.软件规格说明                         B.用户操作手册
+     A.软件规格说明                         B.用户操作手册
 
- C.软件问题报告                         D.软件测试分析报告
+     C.软件问题报告                         D.软件测试分析报告
 
-12.快速原型模型的主要特点之一是(B)
+12. 快速原型模型的主要特点之一是(B)
 
- A.开发完毕才见到产品                   B.及早提供全部完整的软件产品
+     A.开发完毕才见到产品                   B.及早提供全部完整的软件产品
 
- C.开发完毕后才见到工作软件           D.及早提供工作软件
+     C.开发完毕后才见到工作软件           D.及早提供工作软件
 
-13.因计算机硬件和软件环境的变化而作出的修改软件的过程称为(B)
+13. 因计算机硬件和软件环境的变化而作出的修改软件的过程称为(B)
 
- A.教正性维护                       B.适应性维护
+     A.教正性维护                       B.适应性维护
 
- C.完善性维护                       D.预防性维护
+     C.完善性维护                       D.预防性维护
 
-\14. 面向对象方法学的出发点和基本原则是尽可能模拟人类习惯的思维方式，分析、设计和实现一个软件系统的方法和过程，尽可能接近于人类认识世界解决问题的方法和过程。因此面向对象方法有许多特征，如软件系统是由对象组成的；（A）；对象彼此之间仅能通过传递消息互相联系；层次结构的继承。　　
+14. 面向对象方法学的出发点和基本原则是尽可能模拟人类习惯的思维方式，分析、设计和实现一个软件系统的方法和过程，尽可能接近于人类认识世界解决问题的方法和过程。因此面向对象方法有许多特征，如软件系统是由对象组成的；（A）；对象彼此之间仅能通过传递消息互相联系；层次结构的继承。　　
 
-A．开发过程基于功能分析和功能分解
+    A．开发过程基于功能分析和功能分解
 
-　B．强调需求分析重要性
+    　B．强调需求分析重要性
 
-　C．把对象划分成类，每个对象类都定义一组数据和方法
+    　C．把对象划分成类，每个对象类都定义一组数据和方法
 
-　D．对既存类进行调整
+    　D．对既存类进行调整
 
-\15. 在软件详细设计过程中不采用的工具为（A）
+15. 在软件详细设计过程中不采用的工具为（A）
 
-A．判定表                           B．PDL
+    A．判定表                           B．PDL
 
-C．数据流图                         D．IPO图
+    C．数据流图                         D．IPO图
 
-\16. 两个模块之间传递的是同一个数据结构的地址，这种耦合方式称为（C）
+16. 两个模块之间传递的是同一个数据结构的地址，这种耦合方式称为（C）
 
-A．控制耦合                         B．公共耦合
+    A．控制耦合                         B．公共耦合
 
-C．标记耦合                         D．数据耦合
+    C．标记耦合                         D．数据耦合
 
-\17. 软件需求不应包括（B）
+17. 软件需求不应包括（B）
 
-A．功能要求                         B．环境需求
+    A．功能要求                         B．环境需求
 
-C．标准实现的空间需求                 D．用户界面要求
+    C．标准实现的空间需求                 D．用户界面要求
 
-18.下列文档与维护人员有关的有(D)
+18. 下列文档与维护人员有关的有(D)
 
- A.软件需求说明书                   B.项目开发计划
+     A.软件需求说明书                   B.项目开发计划
 
- C.概要设计说明书                   D.操作手册
+     C.概要设计说明书                   D.操作手册
 
-19.采用Gantt图表示软件项目进度安排，下列说法中正确的是(D)
+19. 采用Gantt图表示软件项目进度安排，下列说法中正确的是(D)
 
- A.能够反映多个任务之间的复杂关系
+     A.能够反映多个任务之间的复杂关系
 
- B.能够直观表示任务之间相互依赖制约关系
+     B.能够直观表示任务之间相互依赖制约关系
 
- C.能够表示哪些任务是关键任务
+     C.能够表示哪些任务是关键任务
 
- D.能够表示子任务之间的并行和串行关系
+     D.能够表示子任务之间的并行和串行关系
 
  
 
