--- a/SoftwareEngineering/数字电路/1.md
+++ b/SoftwareEngineering/数字电路/1.md
@@ -1,24 +1,25 @@
 数字电路
-一、单选题（难度0.4， 每题2分）
+
+## 一、单选题（难度0.4， 每题2分）
 
 029 组合逻辑电路的设计方法
 当编码器 74LS147 的输入端 I1 、 I5 、 I6 、 I7 为低电平，其余输入端为高电平时，输出信号为
 A 1110
 B 1010
-C 1001
+**C 1001**
 D 1000
 C
 007 与逻辑运算
 下列代数是不属于与逻辑运算的是
 A Y＝A · B
 B Y＝B· B
-C Y＝A+B
+**C Y＝A+B**
 D Y＝A· BA
 C
 001 数字电路的特点
 数字电路是工作在数字信号下的电子电路，其数字信号特点是:
 
-A 时间和数量上都是离散的
+**A 时间和数量上都是离散的**
 B 时间离散，数量上连续
 C 时间连续，数量上离散
 D 时间和数量都是连续
@@ -28,7 +29,7 @@ A
 A 11110
 B 10001
 C 11000
-D 10000
+**D 10000**
 D
 003 数制
 不同进制数的转换，有直接选择两个相等的不同进制的数
@@ -669,7 +670,7 @@ A 0
 B 1
 C 2
 D 3
-     C
+C
 085 555定时器
 具有脉冲鉴幅能力的触发器是
 
@@ -1523,13 +1524,15 @@ TTL与非门， 反相器， RC积分电路
 
 
 
-
-二、简答（难度0.8 每5分）
+## 二、简答（难度0.8 每5分）
 254 逻辑函数的基本规则
 题目: 简述逻辑代数中求反函数的“反演规则”。
-答案: 1. 将逻辑表达式中“原变量”换成“反变量”， “反变量” 换成“原变量”；
-2.+”换成“ · ”，“·”换成“+”；
+答案: 
+
+1. 将逻辑表达式中“原变量”换成“反变量”， “反变量” 换成“原变量”；
+2. +”换成“ · ”，“·”换成“+”；
 3. 常量“1”换成“0”， 常量“0”换成“1”。
+
 248 数字电路的特点
 题目: 数字电路的特点是什么？
 答案: 数字电路是处理数字信号的电路，而数字信号表示的是数字量。数字量在时间上和数量上都是离散的物理量。
