--- a/SoftwareEngineering/数字电路/1.md
+++ b/SoftwareEngineering/数字电路/1.md
@@ -36,15 +36,28 @@ D
 也有给出几个不同进制数比大小
 在下列一组数中，最大数是:
 
-A 二进制数11101101.1
+**A 二进制数11101101.1**
 B 十制数231
 C 八制数124.4
 D 十六进制数4C.2
 A
+
+| 转换代码图表 |      |      |      |      |      |      |      |      |
+| ------------ | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+| 十进制       | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    |
+| 十六进制     | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    |
+| 二进制       | 0000 | 0001 | 0010 | 0011 | 0100 | 0101 | 0110 | 0111 |
+
+| 转换代码图表 |      |      |      |      |      |      |      |      |
+| ------------ | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+| 十进制       | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   |
+| 十六进制     | 8    | 9    | A    | B    | C    | D    | E    | F    |
+| 二进制       | 1000 | 1001 | 1010 | 1011 | 1100 | 1101 | 1110 | 1111 |
+
 004 码制
 十进制数1的8421码为
 
-A 1
+**A 1**
 B 10
 C 1000
 D 100
@@ -54,21 +67,21 @@ A
 A 10101111010.1
 B 10101101011.1
 C 10111101010.1
-D 10101101010.1
+**D 10101101010.1**
 D
 006 逻辑代数
 与代数式A+AB相等的是
 
 A B+A
 B A
-C B
+**C B**
 D B（A+B）
 B
 008 与逻辑运算
 已知输入A，B为与逻辑关系，当输出为1时，AB可能的值是
 
 A A=1，B=0
-B A=1，B=1
+**B A=1，B=1**
 C A=0，B=0
 D A=0，B=1
 B
@@ -76,7 +89,7 @@ B
 在决定事物结果的诸条件中只要有任何一个满足，结果就会发生为
 
 A 逻辑乘
-B 逻辑加
+**B 逻辑加**
 C 逻辑反
 D 以上说法都不对
 B
@@ -86,7 +99,7 @@ B
 A 转换器
 B 比较器
 C 发生器
-D 反相器
+**D 反相器**
 D
 011 正逻辑与负逻辑
 门电路输入输出高低电平赋值为（ ）为正逻辑
@@ -94,7 +107,7 @@ D
 A 0
 B 11
 C 1
-D 10
+**D 10**
 D
 012 逻辑函数的基本公式
 基本逻辑电路，不包括
@@ -102,7 +115,7 @@ D
 A “与”门
 B “或”门
 C “非”门
-D “与或”门
+**D “与或”门**
 D
 013 逻辑函数
 用卡诺图化简时,若对每个方格群尽可能选大，则在最简表达式中
@@ -172,8 +185,7 @@ B
 CMOS与非门多余输入端应该
 
 A 接地
-B 接电源电压
-C 悬空
+ C 悬空
 
 B
 022 TTL集电极开路门(OC门)
@@ -1676,4 +1688,4 @@ TTL与非门， 反相器， RC积分电路
 第三、暂稳态维持时间的长短取决于电路本身的参数，与触发脉冲的宽度和幅度无关。单稳态触发器广泛应用于脉冲整形，延时，以及定时等。
 299 脉冲整形电路
 题目: 获得矩形脉冲波形的两种方法是什么？
-答案: 一种是利用各种形式的多谐振荡器直接产生所需要的矩形脉冲。另一种是通过各种整形电路将已有的周期变化的波形转化为需要的矩形脉冲。
+答案: 一种是利用各种形式的**多谐振荡器**直接产生所需要的矩形脉冲。另一种是通过各种整形电路将已有的周期变化的波形转化为需要的矩形脉冲。
