--- a/SoftwareEngineering/数字电路/1.md
+++ b/SoftwareEngineering/数字电路/1.md
@@ -121,7 +121,7 @@ D
 用卡诺图化简时,若对每个方格群尽可能选大，则在最简表达式中
 
 A 与项的个数少
-B 每个与项含的变量个数少
+B 每个与项含的变量个数少x
 C 化简结果具有唯一性
 D 结果不唯一
 B
@@ -130,13 +130,13 @@ B
 
 A 结构简单
 B 成本低
-C 作输出时发生电平漂移
+**C 作输出时发生电平漂移**
 D 输入电流过大
 C
 015 二极管或门电路
 二极管或门电路主要用于
 
-A 集成电路内部的逻辑单元
+A 集成电路内部的逻辑单元 x
 B 集成电路外部的逻辑单元
 C 分立元件门电路内部的逻辑单元
 D 分立元件门电路外部的逻辑单元
@@ -145,8 +145,8 @@ A
 三极管工作在深饱和状态，以使输出电平接近于零，输入为
 
 A 低电平
-B 高电平
-C 与输入电平无关
+B 高电平 x
+C 与输入电平无关 
 D 以上说法都不对
 B
 017 三极管非门
@@ -154,14 +154,14 @@ B
 
 A 放大区
 B 饱和区
-C 截止区
+C 截止区 x
 D 击穿区
 C
 018 TTL集成门电路
 TTL集成门电路传输延迟时间是的输出波形比输入
 
 A 超前
-B 滞后
+B 滞后 x
 C 无影响
 D 不能确定
 B
@@ -170,14 +170,14 @@ B
 
 A 普通的CMOS门
 B 漏极开路的CMOS门
-C TTL电路的OC门
+C TTL电路的OC门 x
 D 以上电路都不行
 C
 020 TTL集成门电路
 对于ＴＴＬ门电路，逻辑低电平时输入端电阻与关门电阻的关系为
 
 A 大于
-B 小于
+B 小于 x
 C 等于
 D 无法确定
 B
@@ -192,7 +192,7 @@ B
 三极管开关应用时，相当于开关接通时，该三极管处于（ ）
 
 A 放大区
-B 饱和区
+B 饱和区 x
 C 截止区
 D 击穿区
 B
@@ -200,7 +200,7 @@ B
 组合逻辑电路任意时刻的输出信号取决于
 
 A 该时刻前的输入信号
-B 该时刻的输入信号
+B 该时刻的输入信号 x
 C 该时刻后的输入信号
 D 电路原来的状态
 B
@@ -210,20 +210,20 @@ B
 A 与门
 B 非门
 C 或非门
-D 反馈连接
+D 反馈连接 x
 D
 025 组合逻辑电路的分类
 下列电路不属于组合逻辑电路的是
 
 A 只读存储器
 B 数据选择器
-C 放大器
+C 放大器 x
 D 加法器
 C
 026 组合逻辑电路
 下列电路属于组合逻辑电路的是
 
-A 全加器
+A 全加器 x
 B 寄存器
 C 计数器
 D 触发器
@@ -233,7 +233,7 @@ A
 
 A 时序逻辑电路
 B 寄存器
-C 组合逻辑电路
+C 组合逻辑电路 x
 D 以上说法都不对
 C
 028 组合逻辑电路的分析方法
@@ -241,13 +241,13 @@ C
 
 A 3
 B 4
-C 5
+C 5 x
 D 6
 C
 030 编码器
 当优先编码器的几个输入端（ ）出现有效信号时，其输出端给出优先权较高的输入信号的代码
 
-A 同时
+A 同时 x
 B 先后
 C 与次序无关
 
@@ -257,21 +257,21 @@ A
 
 A 4
 B 3
-C 2
+C 2 x
 D 1
 C
 032 加法器
 全加器有（ ）个输入信号
 
 A 4
-B 3
+B 3 x
 C 2
 D 1
 B
 033 数值比较器
 多位数值比较器比较两数大小顺序是（ ）
 
-A 自高而低
+A 自高而低 x
 B 自低而高
 C 两种顺序都可以
 D 无法判断
@@ -279,7 +279,7 @@ A
 034 编码器
 编码电路和译码电路中，（ ）电路的输出是二进制代码
 
-A 编码
+A 编码 x
 B 译码
 C 编码和译码
 
@@ -287,7 +287,7 @@ A
 035 译码器
 在大多数情况下，对于译码器而言
 
-A 其输入端数目少于输出端数目
+A 其输入端数目少于输出端数目 x
 B 其输入端数目多于输出端数目
 C 其输入端数目与输出端数目几乎相同
 
@@ -298,12 +298,12 @@ A
 A 2
 B 4
 C 6
-D 8
+D 8 x
 D
 037 译码器
 下列电路中，（ ）电路的功能是将输入信号转换成对应的二进制代码
 
-A 编码器
+A 编码器 x
 B 寄存器
 C 数据选择器
 D 加法器
@@ -312,7 +312,7 @@ A
 将BCD代码翻译成十个对应的输出信号的电路有（ ）个输入端
 
 A 3
-B 4
+B 4 x
 C 5
 D 6
 B
@@ -320,7 +320,7 @@ B
 按竞争的结果，下列选项正确的是
 
 A 冒险竞争
-B 临界竞争
+B 临界竞争 x
 C 竟争
 D 以上说法都对
 B
@@ -330,21 +330,21 @@ B
 A 静态险象
 B 动态险象
 C 函数险象
-D 逻辑险象
+D 逻辑险象 x
 D
 041 冒险的概念
 下列选项不能消除竞争冒险的是
 
 A 接入滤波电容
 B 引入选通脉冲
-C 改变输入信号
+C 改变输入信号 x
 D 修改逻辑设计
 C
 042 触发器的功能
 触发器具有几个能自行保持的稳定状态，用来表示逻辑状态
 
 A 1个
-B 2个
+B 2个 x
 C 3个
 D 4个
 B
@@ -352,7 +352,7 @@ B
 基本RS触发器的输入R＝0，S＝1，为一状态，当S回到0时，电路为
 
 A 0状态
-B 1状态
+B 1状态 x
 C 无法确定
 D 以上说法都不对
 B
@@ -361,13 +361,13 @@ B
 
 A 无法确定
 B 0
-C 1
+C 1 x
 D 以上说法都不对
 C
 045 基本RS触发器
 基本RS触发器输入R=1，S=0时输出Q为
 
-A 0
+A 0 x
 B 1
 C 无法判断
 D 以上说法都不对
@@ -377,13 +377,13 @@ A
 
 A 无限制
 B 异步
-C 同步
+C 同步 x
 D 以上说法都对
 C
 047 同步触发器
 同步触发器CP=1时，若输入信号多次发生变化，触发器状态多次发生翻转，则可知
 
-A 抗干扰能力差
+A 抗干扰能力差 x
 B 抗干扰能力好
 C 与抗干扰能力无关
 D 无法判断
@@ -392,14 +392,14 @@ A
 主从RS触发器时钟信号相位的关系是
 
 A 相同
-B 相反
+B 相反 x
 C 无关
 D 无法确定
 B
 049 主从RS触发器
 主从RS触发器在CP的一个周期中触发器的输出状态能改变（ ）
 
-A 1次
+A 1次 x
 B 2次
 C 3次
 D 任意次
@@ -408,7 +408,7 @@ A
 时钟有效边沿到来时，输出状态和输入信号相同的触发器叫
 
 A RS触发器
-B D触发器
+B D触发器 x
 C T触发器
 D JK触发器
 B
@@ -416,7 +416,7 @@ B
 单稳态触发器有（ ）个稳定状态
 
 A 0
-B 1
+B 1 x
 C 2
 D 3
 B
@@ -426,7 +426,7 @@ B
 A JK触发器
 B T触发器
 C D触发器
-D RS触发器
+D RS触发器 x
 D
 053 主从JK触发器
 选出输入RS使主从JK触发器的状态是确定的
@@ -434,12 +434,12 @@ D
 A R＝1，S＝0
 B R＝0，S＝1
 C R＝1，S＝1
-D R＝0，S＝0
+D R＝0，S＝0 x
 D
 054 主从JK触发器
 主从JK触发器在CP＝（ ）时，接收J、K端信号
 
-A 1
+A 1 x
 B 0
 C 无法确定
 
@@ -449,7 +449,7 @@ A
 
 A 改变
 B 相反
-C 不变
+C 不变 x
 D 无法确定
 C
 056 边沿触发器
@@ -457,14 +457,14 @@ C
 
 A 主从RS触发器
 B 主从JK触发器
-C 主从型D触发器
+C 主从型D触发器 x
 D 都不对
 C
 057 触发器逻辑功能的转换
 输入信号为（ ）端的情况下，JK触发器的逻辑功能最为完善
 
 A 1端
-B 2端
+B 2端 x
 C 3端
 D 大于3端
 B
@@ -472,14 +472,14 @@ B
 在 CP 脉冲作用下只具有保持和翻转功能的触发器是（ ）触发器
 
 A JK触发器
-B T触发器
+B T触发器x
 C D触发器
 D RS触发器
 B
 059 不同类型触发器相互的转换
 将JK触发器转换成T触发器，则JK值为
 
-A T
+A T x
 B T+1
 C J
 D K
@@ -489,13 +489,13 @@ A
 
 A JK触发器
 B T触发器
-C D触发器
+C D触发器 x
 D RS触发器
 C
 061 触发器逻辑功能的转换
 输入信号为（ ）端的情况下，D触发器用起来最方便
 
-A 1端
+A 1端 x
 B 2端
 C 3端
 D 大于4端
@@ -503,8 +503,8 @@ A
 062 时序逻辑电路的定义
 下列不属于时序逻辑电路的是
 
-A 全加器
-B 寄存器
+A 全加器 x
+B 寄存器 
 C 计数器
 D 触发器
 A
@@ -514,12 +514,12 @@ A
 A 组合逻辑电路
 B 记忆电路
 C 存储电路
-D 以上说都对
+D 以上说都对 x
 D
 064 时序逻辑电路的结构
 在以下各种电路中，属于时序电路的有
 
-A 计数器
+A 计数器 x
 B 全加器
 C 数值比较器
 D 半加器
@@ -529,13 +529,13 @@ A
 
 A 电路由同一种类型触发器构成
 B 电路中触发器必须具有复位功能
-C 电路中各触发器由同一时钟触发
+C 电路中各触发器由同一时钟触发 x
 D 以上说法都不对
 C
 066 时序逻辑电路的分类
 同一时序逻辑，不同状态设置方案所得原始状态图中状态数之所以不同是因为（ ）的设计结果中存在着多余状态
 
-A 状态数目较多
+A 状态数目较多 x
 B 状态数目较少
 C 与状态数目较无关
 
@@ -543,7 +543,7 @@ A
 067 时序逻辑电路的分类
 时序逻辑电路通常由门电路和（ ）组成
 
-A 存储电路
+A 存储电路 x
 B 寄存器
 C 译码器
 D 加法器
@@ -553,7 +553,7 @@ A
 
 A n+1个
 B 0个
-C n个
+C n个 x
 D 无法确定
 C
 069 寄存器
@@ -561,20 +561,20 @@ n个触发器构成的寄存器可存放（ ）个逻辑变量的值
 
 A 1个
 B 0个
-C n个
+C n个 x
 D 无法确定
 C
 070 时序逻辑电路的分析方法
 D触发器也可以构成寄存器电路，当输入端D为0时，再加一个移位正脉冲，D触发器输出端Q=（ ）
 
 A 1
-B 0
+B 0 x
 C 1
 D 10
 B
 071 寄存器
 寄存器由触发器组成，一个触发器能存放()位二进制数码
-A 1
+A 1 x
 B 0
 C 2
 D 无法确定
@@ -585,14 +585,14 @@ A
 A 4
 B 3
 C 2
-D 1
+D 1 x
 D
 073 或逻辑运算
 已知输入A，B为或逻辑关系，当输出为0时，AB可能的值是
 
 A A=1,B=0
 B A=1,B=1
-C A=0,B=0
+C A=0,B=0 x
 D A=0,B=1
 C
 074 移位寄存器
@@ -601,13 +601,13 @@ C
 A 左移
 B 右移
 C 双向
-D 以上选项都正确
+D 以上选项都正确 x
 D
 075 移位寄存器
 移位寄存器的触发器必须是
 
 A 主从型
-B 边沿型
+B 边沿型 x
 C RS型
 D A，B都正确
 B
@@ -617,12 +617,12 @@ B
 A 8
 B 12
 C 15
-D 16
+D 16 x
 D
 077 计数器
 异步计数器在做“加1”“减1”记数时，采取从（ ）工作方式
 
-A 低位到高位
+A 低位到高位 x
 B 高位到低位
 C 无区别
 D 无法确定
@@ -631,7 +631,7 @@ A
 N进制计数器是指计数器的状态每经（ ）个计数脉冲循环一次
 
 A N-1
-B N
+B N x
 C N+1
 D 2N
 B
@@ -639,7 +639,7 @@ B
 对于JK触发器，无论其原处何态，只要（ ）相同，则所需激励相同
 
 A 现态
-B 次态
+B 次态 x
 C 输入
 D 输出
 B
@@ -647,7 +647,7 @@ B
 对于D触发器，无论其原处何态，只要（ ）相同，则所需激励相同
 
 A 现态
-B 次态
+B 次态 x
 C 输入
 D 输出
 B
@@ -657,21 +657,21 @@ B
 A 4
 B 6
 C 8
-D 16
+D 16 x
 D
 082 计数器
 由三个触发器构成的五进制计数器有（ ）个无效状态
 
 A 1
 B 2
-C 3
+C 3 x
 D 4
 C
 083 计数器
 5进制计数器分频比为
 
 A 4
-B 5
+B 5 x
 C 6
 D 10
 B
@@ -680,13 +680,13 @@ B
 
 A 0
 B 1
-C 2
+C 2 x
 D 3
 C
 085 555定时器
 具有脉冲鉴幅能力的触发器是
 
-A 施密特触发器
+A 施密特触发器 x
 B 单稳态触发器
 C 集成单稳态触发器
 D 以上选项都正确
@@ -697,12 +697,12 @@ A
 A 微分触发器
 B 积分单稳态触发器
 C 集成单稳态触发器
-D 微分单稳态触发器
+D 微分单稳态触发器 x
 D
 087 555单稳态触发器
 与微分型单稳态触发器相比较，积分型单稳态触发器抗干扰能力
 
-A 强
+A 强 x
 B 弱
 C 相等
 D 无法判断
@@ -710,7 +710,7 @@ A
 088 555单稳态触发器
 由555定时器接成的单稳态触发器当电路充电后停在（ ）的状态，三极管截止
 
-A Q=1
+A Q=1 x
 B Q=0
 C Q=1或Q=0
 D都不行
@@ -719,14 +719,14 @@ A
 下列电路中，属于脉冲产生电路的是
 
 A单稳态触发器
-B多谐振荡器
+B多谐振荡器 x
 C施密特触发器
 D编码器
 B
 090 555定时器
 电压传输特性曲线具有滞回特性的是
 
-A 施密特触发器
+ A 施密特触发器
 B 单稳态触发器
 C 多谐振荡器
 
@@ -740,9 +740,9 @@ C 其噪声容限较TTL电路大
 D 无法比较
 C
 
-二、多选（难度0.4 每题3分）
+## 二、多选（难度0.4 每题3分）
 092 数字电路的分类
-在以下选项中选出为数字电路的:
+在以下选项中选出为数字电路的: x
 
 A、运算放大器
 B、计数器
@@ -750,7 +750,7 @@ C、译码器
 D、加法器
 B|C|D
 093 逻辑代数
-在以下选项中选出逻辑表达式的组成部分:
+在以下选项中选出逻辑表达式的组成部分: x
 
 A、逻辑变量
 B、逻辑常数0与1
@@ -758,7 +758,7 @@ C、逻辑运算符
 D、括号
 A|B|C|D
 094 与逻辑运算
-已知输入A，B为与逻辑关系，当输出为0时，AB可能的值是:
+已知输入A，B为与逻辑关系，当输出为0时，AB可能的值是: x
 
 A、A=1，B=0
 B、A=1，B=1
@@ -766,7 +766,7 @@ C、A=0，B=0
 D、A=0，B=1
 A|C|D
 095 二极管与门电路
-下列选项中属于二极管与门电路的缺点是:
+下列选项中属于二极管与门电路的缺点是: x
 
 A、结构简单
 B、成本低
@@ -774,7 +774,7 @@ C、作输出时发生电平漂移
 D、负载电阻的改变会影响输出电平的高低
 C|D
 096 二极管或门电路
-下列选项中属于二极管或门电路的特点是:
+下列选项中属于二极管或门电路的特点是: x
 
 A、二极管或门存在电平漂移问题
 B、这种电路结构只用于集成电路内部的逻辑单元
@@ -782,7 +782,7 @@ C、结构简单
 D、以上说法都不对
 A|B
 097 三极管非门电路(反相器)
-当输入为高电平时，下列选项正确的是:
+当输入为高电平时，下列选项正确的是: x
 
 A、三极管工作在深饱和状态
 B、三极管的基极电流大于深饱和时候的基极电流
@@ -790,7 +790,7 @@ C、三极管的基极电流小于深饱和时候的基极电流
 D、输出电平接近于零
 A|B|D
 098 TTL集成门电路
-下列选项中属于TTL反向器的动态特性传输延迟时间原因的是:
+下列选项中属于TTL反向器的动态特性传输延迟时间原因的是:x
 
 A、管电阻
 B、连线的寄生电容
@@ -798,7 +798,7 @@ C、响应时间
 D、以上说法都对
 A|B
 099 TTL集成门电路
-下列选项属于TTL集成门电路交流噪声容限大的原因的是:
+下列选项属于TTL集成门电路交流噪声容限大的原因的是: x
 
 A、三极管的开关时间
 B、分布电容的充放电过程
@@ -806,7 +806,7 @@ C、传输延迟时间
 D、输入电流的大小
 A|B
 100 组合逻辑电路的结构
-以下哪种元件是组合逻辑电路可能的组成部分:
+以下哪种元件是组合逻辑电路可能的组成部分: x
 
 A、与门
 B、异或门
@@ -814,7 +814,7 @@ C、存储单元
 D、反馈连接
 A|B
 101 组合逻辑电路的分类
-下列信号属于全加器的输出的是:
+下列信号属于全加器的输出的是: x
 
 A、被加数
 B、加数
@@ -822,7 +822,7 @@ C、低位进位
 
 A|B|C
 102 组合逻辑电路的分类
-以下电路属于组合逻辑电路的是:
+以下电路属于组合逻辑电路的是: x
 
 A、数据选择器
 B、只读存储器
@@ -830,7 +830,7 @@ C、编码器
 D、比较器
 A|B|C|D
 103 竞争的概念
-按竞争的结果分类，下列选项正确的是:
+按竞争的结果分类，下列选项正确的是: x
 
 A、非临界竞争
 B、临界竞争
@@ -838,7 +838,7 @@ C、竟争
 D、以上说法都对
 A|B
 104 冒险的概念
-按冒险的险象分类，下列选项正确的是:
+按冒险的险象分类，下列选项正确的是: x
 
 A、静态险象
 B、动态险象
@@ -846,7 +846,7 @@ C、函数险象
 D、以上说法都正确
 A|B
 105 触发器的功能
-选出触发器的触发方式:
+选出触发器的触发方式: x
 
 A、电平
 B、脉冲
@@ -854,7 +854,7 @@ C、边沿
 D、以上选项都正确
 A|B|C|D
 106 触发器的功能
-下列哪些触发器（ ）无论其原处何态，只要次态相同，则所需激励相同。
+下列哪些触发器（ ）无论其原处何态，只要次态相同，则所需激励相同。x
 
 A、D触发器
 B、RS触发器
@@ -862,7 +862,7 @@ C、JK触发器
 D、T触发器
 A|B|C
 107 同步触发器
-下列信号表示同步触发器的同步信号的是:
+下列信号表示同步触发器的同步信号的是: x
 
 A、时钟脉冲信号
 B、时钟信号
@@ -870,7 +870,7 @@ C、时钟
 D、CP
 A|B|C|D
 108 T触发器
-T触发器所需激励值取决于:
+T触发器所需激励值取决于: x
 
 A、现态
 B、次态的异或
@@ -878,7 +878,7 @@ C、次态
 D、现态的异或
 A|B
 109 同步触发器
-同步触发器在CP＝1的全部时间里，（ ）变化都能引起触发器输出端状态的改变。
+同步触发器在CP＝1的全部时间里，（ ）变化都能引起触发器输出端状态的改变。 x
 
 A、S
 B、R
@@ -886,14 +886,14 @@ C、S或R
 D、都不会改变
 A|B|C
 110 主从JK触发器
-主从JK触发器CP＝1的全部时间里，对主触发器起控制作用输入信号为:
+主从JK触发器CP＝1的全部时间里，对主触发器起控制作用输入信号为:  x
 
 A、J
 B、K
 C、J或K
 D、J和K
 A|B|C|D
-111 时序逻辑电路的分析
+111 时序逻辑电路的分析 x
 状态表化简的原理:
 
 A、完备或覆盖性
@@ -902,7 +902,7 @@ C、封闭性
 
 A|B|C
 112 时序逻辑电路的定义
-下列属于时序逻辑电路的是:
+下列属于时序逻辑电路的是: x
 
 A、触发器
 B、寄存器
@@ -910,7 +910,7 @@ C、计数器
 D、移位寄存器
 A|B|C|D
 113 寄存器
-寄存器数据输出方式:
+寄存器数据输出方式: x
 
 A、并行
 B、串行
@@ -918,7 +918,7 @@ C、移位
 D、以上说法都正确
 A|B
 114 移位寄存器
-移位寄存器级连方式:
+移位寄存器级连方式: x
 
 A、左移
 B、右移
@@ -926,7 +926,7 @@ C、双向
 D、以上说法都正确
 A|B|C|D
 115 寄存器
-寄存器与寄存器外部的数据交换型式:
+寄存器与寄存器外部的数据交换型式:x
 
 A、并入并出
 B、串入串出
@@ -934,7 +934,7 @@ C、并入串出
 D、串入并出
 A|B|C|D
 116 计数器
-在五进制计数器电路中要用（ ）个触发器，在三进制计数器电路中要用（ ）个触发器。
+在五进制计数器电路中要用（ ）个触发器，在三进制计数器电路中要用（ ）个触发器。 x
 
 A、4
 B、3
@@ -942,7 +942,7 @@ C、2
 D、1
 B|C
 117 寄存器
-寄存器必须附加组合逻辑电路以实现数据的（ ）。
+寄存器必须附加组合逻辑电路以实现数据的（ ）。 x
 
 A、保持
 B、更新
@@ -950,7 +950,7 @@ C、移动
 D、以上选项都不对
 A|B|C
 118 时序逻辑电路的结构
-时序逻辑电路可以由选项中哪些方程全面描述:
+时序逻辑电路可以由选项中哪些方程全面描述:x
 
 A、状态方程
 B、驱动方程
@@ -958,7 +958,7 @@ C、输出方程
 D、以上选项都不对
 A|B|C
 119 计数器
-能由二进制计数器简单地级联构成的计数器为:
+能由二进制计数器简单地级联构成的计数器为:  x
 
 A、4进制计数器
 B、6进制计数器
@@ -966,7 +966,7 @@ C、8进制计数器
 D、10进制计数器
 A|C
 120 计数器
-有10进制计数器，要得到5进制计数器可采用（ ）实现。
+有10进制计数器，要得到5进制计数器可采用（ ）实现。x
 
 A、并行进位方式
 B、串行进位方式
@@ -975,7 +975,7 @@ D、置零法
 C|D
 121 用555定时器构成单稳态触发器
 在单稳态触发器的输入端触发电路中，可以采用基极触发电路，也可以采用集电极触发电路。
-根据有效触发脉冲的极性不同又有:
+根据有效触发脉冲的极性不同又有: x
 
 A、正尖顶脉冲触发
 B、负尖顶脉冲触发
@@ -983,7 +983,7 @@ C、无法确定
 
 A|B
 122 概述
-描述矩形脉冲的主要参数:
+描述矩形脉冲的主要参数: x
 
 A、脉冲幅度
 B、脉冲周期
@@ -991,7 +991,7 @@ C、脉冲宽度
 D、上升时间
 A|B|C|D
 123 555定时器
-555定时器能方便的组成如下哪些器件:
+555定时器能方便的组成如下哪些器件: x
 
 A、施密特触发器
 B、单稳态触发器
@@ -1019,363 +1019,362 @@ A|B|C|D
 
 
 
-
-三、判断（难度0.4 每题2分）
+## 三、判断（难度0.4 每题2分）
 
 124 数字电路的特点
-数字电路处理数字信号，对于模拟信号要通过变换电路，将模拟信号转换成数字信号之后才能送入数字电路中。
+数字电路处理数字信号，对于模拟信号要通过变换电路，将模拟信号转换成数字信号之后才能送入数字电路中。x
 
 对
 125 数字电路的特点
-在时间上离散的物理量都是数字量。
+在时间上离散的物理量都是数字量。x
 
 错
 126 数制
-二进制加、减、乘与10进制规则相同，进借位权相同。
+二进制加、减、乘与10进制规则相同，进借位权相同。x
 
 错
 127 数制
-负数的原码、反码、补码的符号位均为1，数值位为负数本身。
+负数的原码、反码、补码的符号位均为1，数值位为负数本身。x
 
 错
 128 逻辑函数
-一个逻辑函可存在不同形式的逻辑表达式，因此可存在不同形式的真值表。
+一个逻辑函可存在不同形式的逻辑表达式，因此可存在不同形式的真值表。x
 
 错
 129 逻辑函数
-逻辑函数输入变量的所有组态均对应一最小项。
+逻辑函数输入变量的所有组态均对应一最小项。x
 
 对
 130 逻辑函数
-任一逻辑函数均可变换为唯一的最小项之和表达式，称之为标准与－或表达式。
+任一逻辑函数均可变换为唯一的最小项之和表达式，称之为标准与－或表达式。x
 
 对
 131 逻辑函数的基本公式
-函数最简即表达式的项数最少，且每项中变量字母也最少。
+函数最简即表达式的项数最少，且每项中变量字母也最少。x
 因此最简函数是唯一的。
 
 错
 132 逻辑函数的基本规则
-与非门是“万能门”,只用与非门就可实现任何数字系统。
+与非门是“万能门”,只用与非门就可实现任何数字系统。x
 
 对
 133 逻辑函数的基本规则
-约束项就是逻辑函数中不会出现的变量取值组合，用卡诺图化简时，可将约束项当作1，也可当作0。
+约束项就是逻辑函数中不会出现的变量取值组合，用卡诺图化简时，可将约束项当作1，也可当作0。x
 
 对
 134 逻辑函数的基本规则
-“或”门的逻辑表达式为F=A+B，当A和B都为“1”时，F则等于“0”。
+“或”门的逻辑表达式为F=A+B，当A和B都为“1”时，F则等于“0”。x
 
 错
 135 逻辑函数的基本规则
-虽然或非门与与非门对偶，但不能只用或非门实现任何数字系统。
+虽然或非门与与非门对偶，但不能只用或非门实现任何数字系统。x
 
 错
 136 数字电路的特点
-热电偶的电压信号，温度变化时，电压随之改变，但它是数字信号。
+热电偶的电压信号，温度变化时，电压随之改变，但它是数字信号。x
 
 错
 137 二极管与门电路
-二极管与门电路结构简单，但是有它的缺点，输出端对地接入负载时，负载电阻的改变会影响输出电平的高低。
+二极管与门电路结构简单，但是有它的缺点，输出端对地接入负载时，负载电阻的改变会影响输出电平的高低。x
 
 对
 138 二极管或门电路
-二极管或门电路主要用于集成电路外部的逻辑单元。
+二极管或门电路主要用于集成电路外部的逻辑单元。x
 
 错
 139 三极管非门电路(反相器)
-当输入为高电平时，应保证三极管工作在身饱和状态，以使输出电平接近于零，要保证三极管的基极电流小于深饱和时候的基极电流。
+当输入为高电平时，应保证三极管工作在身饱和状态，以使输出电平接近于零，要保证三极管的基极电流小于深饱和时候的基极电流。x
 
 错
 140 TTL集成门电路
-由于三极管的开关时间和分布电容的充放电过程，因而输入信号必须有足够的变化幅度和变化时间输出才能够变化。
+由于三极管的开关时间和分布电容的充放电过程，因而输入信号必须有足够的变化幅度和变化时间输出才能够变化。x
 
 对
 141 TTL与非门
-三极管截止、饱和时的集电极与发射极之间内阻相差很大。
+三极管截止、饱和时的集电极与发射极之间内阻相差很大。x
 
 对
 142 复合门电路
-与CMOS电路相比，TTL电路的主要优点是速度快。
+与CMOS电路相比，TTL电路的主要优点是速度快。x
 
 对
 143 三态门的作用
-三态门的作用就是为了提高电路的负载能力，使总线带负载能力有较大提高。
+三态门的作用就是为了提高电路的负载能力，使总线带负载能力有较大提高。x
 
 对
 144 TTL电路
-在TTL电路中通常规定高电平额定值为5V。
+在TTL电路中通常规定高电平额定值为5V。x
 
 对
 145 TTL电路OC门
-OC门就是集电极开路与非门，它的逻辑功能就是与逻辑。
+OC门就是集电极开路与非门，它的逻辑功能就是与逻辑。x
 
 对
 146 TTL与非门
-TTL与非门的多余输入端可以接固定高电平。
+TTL与非门的多余输入端可以接固定高电平。x
 
 对
 147 TTL或非门
-TTL或非门的多余输入端电阻趋于无穷大时刻认为是逻辑高电平。
+TTL或非门的多余输入端电阻趋于无穷大时刻认为是逻辑高电平。x
 
 对
 148 TTL电路OC门
-采用“OC门”可提高电路的负载能力，它主要应用于灌电流负载。
+采用“OC门”可提高电路的负载能力，它主要应用于灌电流负载。x
 
 对
 149 复合门电路
-CMOS电路和TTL电路在使用时，不用的管脚可悬空。
+CMOS电路和TTL电路在使用时，不用的管脚可悬空。x
 
 错
 150 组合逻辑电路的定义
-组合逻辑电路任意时刻的输出信号不仅取决于该时刻的输入信号，还与信号作用前电路原来的状态有关。
+组合逻辑电路任意时刻的输出信号不仅取决于该时刻的输入信号，还与信号作用前电路原来的状态有关。x
 
 错
 151 组合逻辑电路的结构
-组合逻辑电路是由常用门电路及存储单元组成。
+组合逻辑电路是由常用门电路及存储单元组成。x
 
 错
 152 组合逻辑电路的分析方法
-移位寄存器不可以存储数据，但可以实现移位功能。
+移位寄存器不可以存储数据，但可以实现移位功能。x
 
 错
 153 编码器
-编码器任何时候只允许一个编码信号输入，否则将发生混乱。
+编码器任何时候只允许一个编码信号输入，否则将发生混乱。x
 
 对
 154 加法器
-半加器电路可完成两个一位二进数的求和运算，全加器比半加器电路都一个输入端，共有三个输入端。
+半加器电路可完成两个一位二进数的求和运算，全加器比半加器电路都一个输入端，共有三个输入端。x
 
 对
 155 组合逻辑电路的分析方法
-寄存器、计数器都属于组合电路；编码器、译码器属于时序电路。
+寄存器、计数器都属于组合电路；编码器、译码器属于时序电路。x
 
 错
 156 组合逻辑电路的分析方法
-移位寄存器 74LS194 可串行输入并行输出，但不能串行输入串行输出。
+移位寄存器 74LS194 可串行输入并行输出，但不能串行输入串行输出。x
 
 错
 157 计数器
-同步计数器的计数速度比异步计数器快。
+同步计数器的计数速度比异步计数器快。x
 
 错
 158 译码器
-译码器是将给定的二进制代码“翻译”成相应的输出信号，从而去控制显示器工作。
+译码器是将给定的二进制代码“翻译”成相应的输出信号，从而去控制显示器工作。x
 
 对
 159 译码器
-采用显示译码器是因为用 BCD 码不能直接使数码管显示正确字符。
+采用显示译码器是因为用 BCD 码不能直接使数码管显示正确字符。x
 
 对
 160 寄存器
-即使电源关闭，移位寄存器中的内容也可以保持下去。
+即使电源关闭，移位寄存器中的内容也可以保持下去。x
 
 对
 161 竞争的概念
-当一个门的输入有一个变量发生改变时，时差引起的现象称为竞争。
+当一个门的输入有一个变量发生改变时，时差引起的现象称为竞争。x
 
 错
 162 冒险的概念
-若输出的稳态值为0，出现了正的尖脉冲毛刺，则称为静态0险象；若输出稳态值为1，出现了负的尖脉冲毛刺，则称为动态险象。
+若输出的稳态值为0，出现了正的尖脉冲毛刺，则称为静态0险象；若输出稳态值为1，出现了负的尖脉冲毛刺，则称为动态险象。x
 
 错
 163 触发器的功能
-触发器的功能是够存储一位二进制信号的基本单元电路。
+触发器的功能是够存储一位二进制信号的基本单元电路。x
 
 对
 164 触发器的特点
-同步触发器在CP为1期间出现的多次翻转现象是时序电路的一种冒险现象。
+同步触发器在CP为1期间出现的多次翻转现象是时序电路的一种冒险现象。x
 
 对
 165 触发器的特点
-触发器在输入信号消失后，不能将获得的新状态保存下来。
+触发器在输入信号消失后，不能将获得的新状态保存下来。x
 
 错
 166 基本RS触发器
-R＝1，S＝1的信号同时消失后，电路的状态无法判定。
+R＝1，S＝1的信号同时消失后，电路的状态无法判定。x
 
 对
 167 主从JK触发器
-主从型JK触发器，在C的前沿触发，当J=K=1时，为计数状态。
+主从型JK触发器，在C的前沿触发，当J=K=1时，为计数状态。x
 
 错
 168 基本RS触发器
-基本RS触发器的输入信号在S或R为高电平的时间内，不能能直接改变输出端的状态。
+基本RS触发器的输入信号在S或R为高电平的时间内，不能能直接改变输出端的状态。x
 
 错
 169 同步触发器
-同步触发器在同步信号到达时按输入信号改变状态，异步信号到达时也改变状态。
+同步触发器在同步信号到达时按输入信号改变状态，异步信号到达时也改变状态。x
 
 错
 170 主从RS触发器
-主触发器在CP=0期间状态改变，从触发器按照与主触发器相同的状态翻转。
+主触发器在CP=0期间状态改变，从触发器按照与主触发器相同的状态翻转。x
 
 错
 171 主从JK触发器
-主从JK触发器约束条件与主从RS触发器相同。
+主从JK触发器约束条件与主从RS触发器相同。x
 
 错
 172 主从JK触发器
-主从JK触发器当CP的下降沿到达时，从触发器的状态一定按此时刻输入信号的状态翻转。
+主从JK触发器当CP的下降沿到达时，从触发器的状态一定按此时刻输入信号的状态翻转。x
 
 错
 173 单稳态触发器
-单稳态触发器无需外加触发脉冲就能产生周期性脉冲信号。
+单稳态触发器无需外加触发脉冲就能产生周期性脉冲信号。x
 
 错
 174 T触发器
-当输入一个CP脉冲其输出状态就翻转一次的触发器是T触发器。
+当输入一个CP脉冲其输出状态就翻转一次的触发器是T触发器。x
 
 错
 175 触发器
-触发器的异步复位端不受CP脉冲的控制。
+触发器的异步复位端不受CP脉冲的控制。x
 
 错
 176 D触发器
-D型触发器在C的后沿触发，当C的后沿到来时，Q的状态与D的状态相同。
+D型触发器在C的后沿触发，当C的后沿到来时，Q的状态与D的状态相同。x
 
 错
 177 D触发器
-D触发器所需激励值与次态值永远相同，与现态值无关。
+D触发器所需激励值与次态值永远相同，与现态值无关。x
 
 对
 178 触发器的功能
-所有的触发器都有时钟信号。
+所有的触发器都有时钟信号。x
 
 错
 179 主从JK触发器
-主从JK触发器CP＝1的全部时间里，输入信号都将对主触发器起控制作用。
+主从JK触发器CP＝1的全部时间里，输入信号都将对主触发器起控制作用。x
 
 对
 180 不同类型时钟触发器间的转换
-同一种逻辑功能的触发器可以用不同的电路结构来实现，而且同一种电路结构形式也可以构成不同逻辑功能的触发器。
+同一种逻辑功能的触发器可以用不同的电路结构来实现，而且同一种电路结构形式也可以构成不同逻辑功能的触发器。x
 
 对
 181 边沿触发器
-边沿触发器会出现空翻现象。
+边沿触发器会出现空翻现象。x
 
 错
 182 时序逻辑电路的定义
-时序逻辑电路任意时刻的输出信号仅取决于该时刻的输入信号。
+时序逻辑电路任意时刻的输出信号仅取决于该时刻的输入信号。x
 
 错
 183 时序逻辑电路的分析
-同一时序逻辑，消除多余态，也得不到相同的设计结果。
+同一时序逻辑，消除多余态，也得不到相同的设计结果。x
 
 错
 184 时序逻辑电路的分析
-如能找出原始状态图中所有相互等价态，则可只留不相互等价态，得到最简状态图。
+如能找出原始状态图中所有相互等价态，则可只留不相互等价态，得到最简状态图。x
 
 对
 185 时序逻辑电路的分析
-不同状态设置方案所得原始状态图中状态数之所以不同是因为状态数目较多的设计结果中存在着多余状态。
+不同状态设置方案所得原始状态图中状态数之所以不同是因为状态数目较多的设计结果中存在着多余状态。x
 
 对
 186 时序逻辑电路的分析
-如果将同一时序电路的两个状态Si和Sj分别作为起始态，不论加入任何可能的输入序列，电路均产生相同的输出序列，我们称Si和Sj是等价状态或等价对。
+如果将同一时序电路的两个状态Si和Sj分别作为起始态，不论加入任何可能的输入序列，电路均产生相同的输出序列，我们称Si和Sj是等价状态或等价对。x
 
 对
 187 时序逻辑电路的分析
-无法确保通过合适的状态设置直接得到最少状态数的原始状态图，但有某些规范方法将原始状态图中的多余状态消除。
+无法确保通过合适的状态设置直接得到最少状态数的原始状态图，但有某些规范方法将原始状态图中的多余状态消除。x
 
 对
 188 时序逻辑电路的分析
-可以相互代替的状态称之为状态等价。
+可以相互代替的状态称之为状态等价。x
 
 对
 189 555多谐振荡器
-没有稳定状态，电路在“0”和“1”之间不断变化，可输出连续方波的电路，又称多谐振荡器。
+没有稳定状态，电路在“0”和“1”之间不断变化，可输出连续方波的电路，又称多谐振荡器。x
 
 对
 190 寄存器
 寄存器有两大类:
 一是数码寄存器，移位寄存器。
-两种寄存器的不同之处就是后者能够对存放的数码进行左移或右移，但一个移位寄存器不能做到又能左移又能右移。
+两种寄存器的不同之处就是后者能够对存放的数码进行左移或右移，但一个移位寄存器不能做到又能左移又能右移。x
 
 错
 191 寄存器
-寄存器是在移位脉冲CP作用下接收输入数码的，并且只在CP从高电平变为低电平的下降沿接收输入数码。
+寄存器是在移位脉冲CP作用下接收输入数码的，并且只在CP从高电平变为低电平的下降沿接收输入数码。x
 
 错
 192 寄存器
-移位寄存器的触发器可以是边沿型，也可以是主从型。
+移位寄存器的触发器可以是边沿型，也可以是主从型。x
 
 错
 193 寄存器
-对于并行输入的寄存器电路，如果要输入一个8位的数码，必须通过8个CP脉冲的作用才将8位数码输入。
+对于并行输入的寄存器电路，如果要输入一个8位的数码，必须通过8个CP脉冲的作用才将8位数码输入。x
 
 错
 194 计数器
-二进制计数器既可实现计数也可用于分频。
+二进制计数器既可实现计数也可用于分频。x
 
 对
 195 异步时序电路
-异步时序电路存储单元状态的变化不是同时发生的，一定没有公共的时钟信号。
+异步时序电路存储单元状态的变化不是同时发生的，一定没有公共的时钟信号。x
 
 错
 196 异步时序电路
-异步时序逻辑电路中，每次电路状态发生转换时，所有的触发器都有时钟信号。
+异步时序逻辑电路中，每次电路状态发生转换时，所有的触发器都有时钟信号。x
 
 错
 197 异步时序电路
 串行级联:
-每片内是同步计数的，片与片间也是同步的。
+每片内是同步计数的，片与片间也是同步的。 x
 
 错
 198 计数器
-假定有8进制计数器，要得到16进制计数器，可用置数法通过将计数器置入某个数值的方法形成。
+假定有8进制计数器，要得到16进制计数器，可用置数法通过将计数器置入某个数值的方法形成。x
 
 错
 199 同步时序电路
-同步时序电路中，由于所有触发器都在同一个时钟操作下动作，因而可以认为不存在竞争-冒险现象。
+同步时序电路中，由于所有触发器都在同一个时钟操作下动作，因而可以认为不存在竞争-冒险现象。x
 
 对
 200 脉冲信号
-对于微分电路而言，要求电路的ＲＣ时间常数远大于输入脉冲宽度。
+对于微分电路而言，要求电路的ＲＣ时间常数远大于输入脉冲宽度。x
 
 错
 201 脉冲信号
-上限幅电路可以将输入信号的正半周全部去掉，也可以只是去掉正半周信号的顶部一部分。
+上限幅电路可以将输入信号的正半周全部去掉，也可以只是去掉正半周信号的顶部一部分。x
 
 对
 202 555施密特触发器
-施密特触发器电路，电路中元器件参数已经确定后它的动作电压和返回电压值大小是不变的。
+施密特触发器电路，电路中元器件参数已经确定后它的动作电压和返回电压值大小是不变的。x
 
 对
 203 555多谐振荡器
-多谐振荡器电路没有输入端，只有输出端，其输出的信号是一个标准的正弦信号。
+多谐振荡器电路没有输入端，只有输出端，其输出的信号是一个标准的正弦信号。x
 
 错
 204 555多谐振荡器
-多谐振荡器电路不象正弦波振荡器电路那样，在振荡器电路设有一个LC选频回路。
+多谐振荡器电路不象正弦波振荡器电路那样，在振荡器电路设有一个LC选频回路。x
 
 对
 205 555多谐振荡器
-多谐振荡器无须外加触发脉冲就能产生周期性脉冲信号。
+多谐振荡器无须外加触发脉冲就能产生周期性脉冲信号。 x
 
 对
 206 555定时器
-已有的周期变化的波形能通过各种整形电路转化为需要的矩形脉冲。
+已有的周期变化的波形能通过各种整形电路转化为需要的矩形脉冲。 x
 
 对
 207 555施密特触发器
-施密特触发器输入信号从低电平上升的过程中，电路状态转换时对应的输入电平与高电平下降过程中对应的输入转换电平相同。
+施密特触发器输入信号从低电平上升的过程中，电路状态转换时对应的输入电平与高电平下降过程中对应的输入转换电平相同。 x
 
 错
 208 555单稳态触发器
-单稳态触发器暂稳态维持时间的长短与触发脉冲的宽度和幅度有关。
+单稳态触发器暂稳态维持时间的长短与触发脉冲的宽度和幅度有关。 x
 
 错
 209 555单稳态触发器
-积分型单稳态触发器只有在足够的脉冲宽度下才能正常工作。
+积分型单稳态触发器只有在足够的脉冲宽度下才能正常工作。x
 
 对
 210 555单稳态触发器
-积分型单稳态触发器在尖峰脉冲噪声下没有足够的触发脉冲宽度，与微分型单稳态触发器相比较，积分型单稳态触发器具有抗干扰能力强的优点。
+积分型单稳态触发器在尖峰脉冲噪声下没有足够的触发脉冲宽度，与微分型单稳态触发器相比较，积分型单稳态触发器具有抗干扰能力强的优点。x
 
 对
 
-四、填空
+## 四、填空
 211 555单稳态触发器
 单稳态触发器是一种脉冲___电路，用555定时器组成的单稳态触发器其脉冲宽度≈___。
 
@@ -1384,151 +1383,151 @@ D触发器所需激励值与次态值永远相同，与现态值无关。
 用二进制两个码元0、1按约定表示数和文字，称为___，代码所含位数为:
 ___。
 
-二值编码，码长
+二值编码，码长 x
 213 数制
-多位数码中每一位的构成方法以及从___的进位规则。
+多位数码中每一位的构成方法以及从___的进位规则。 x
 
 从低位到高位
 214 逻辑代数
-“与非”门的简单逻辑功能是___，___。
+“与非”门的简单逻辑功能是___，___。x
 
 “有0出1”，“全1出0”
 215 逻辑函数
-用等号将___和___连接组成的称为逻辑函数。
+用等号将___和___连接组成的称为逻辑函数。 x
 
 逻辑变量，逻辑表达式
 216 逻辑函数的基本规则
-两个___的最小项可以合并成一个与项，并消去一个因子。
+两个___的最小项可以合并成一个与项，并消去一个因子。  x
 
 逻辑相邻
 217 分立元件门电路
-分立元件门电路是用___和___构成的门电路。
+分立元件门电路是用___和___构成的门电路。  x
 
 分立元器件，导线
 218 二极管与门电路
-门电路中的二极管和三极管经常工作在___状态。
+门电路中的二极管和三极管经常工作在___状态。 x
 
 开关
 219 三极管非门电路
-三极管输入特性曲线可分为三个区域:
+三极管输入特性曲线可分为三个区域: x
 ___，___，___。
 
 放大区，饱和区，截止区
 220 三极管非门电路
 TTL三态门的输出有三种状态:
-高电平、低电平和___状态。
+高电平、低电平和___状态。  x
 
 高阻
 221 三极管非门电路
-三极管非门实际上就是个反向器，加入了电阻和负电源是为了保证输入___电平时三极管可靠的截止。
+三极管非门实际上就是个反向器，加入了电阻和负电源是为了保证输入___电平时三极管可靠的截止。 x
 
 低
 222 TTL集成门电路
-在保证输入___基本保持不变的条件下，输入电平的___称为输入噪声容限。
+在保证输入___基本保持不变的条件下，输入电平的___称为输入噪声容限。 x
 
 高低电平，允许变动范围
 223 组合逻辑电路的定义
-组合逻辑电路任意时刻的输出信号仅取决于___，与信号作用前电路原来的状态___。
+组合逻辑电路任意时刻的输出信号仅取决于___，与信号作用前电路原来的状态___。 x
 
 该时刻的输入信号，无关
 224 组合逻辑电路的定义
-在组合逻辑电路中，___(有、无）反馈电路构成的环路。
+在组合逻辑电路中，___(有、无）反馈电路构成的环路。 x
 
 无
 225 组合逻辑电路的定义
-组合逻辑电路在电路结构上，一般由___组成。
+组合逻辑电路在电路结构上，一般由___组成。 x
 
 门电路
 226 编码器
-编码器任何时候只允许___编码信号输入，否则将发生混乱。
+编码器任何时候只允许___编码信号输入，否则将发生混乱。 x
 
 —个
 227 编码器
-当___编码器的几个输入端同时出现有效信号时，器输出端给出优先权较高的输入信号的代码。
+当___编码器的几个输入端同时出现有效信号时，器输出端给出优先权较高的输入信号的代码。 x
 
 优先
 228 竞争的概念
-竞争的结果若导致冒险发生，并造成错误的后果，则称这种竞争为___；竞争的结果不导致冒险发生，或虽有冒险发生，但不影响系统的工作，则称这种竞争为___。
+竞争的结果若导致冒险发生，并造成错误的后果，则称这种竞争为___；竞争的结果不导致冒险发生，或虽有冒险发生，但不影响系统的工作，则称这种竞争为___。 x
 
 临界竞争，非临界竞争
 229 触发器的功能
-触发器的功能是能够存储___的基本单元电路。
+触发器的功能是能够存储___的基本单元电路。 x
 
 一位二进制信号
 230 基本RS触发器
 由两个与非门组成的基本RS触发器，其约束方称为:
-___。
+___。 x
 
 RS=0
 231 同步触发器
-同步触发器在CP为1期间出现的多次翻转现象称为___。
+同步触发器在CP为1期间出现的多次翻转现象称为___。 x
 
 空翻
 232 触发器的结构
-触发器的触发方式有___，___，___。
+触发器的触发方式有___，___，___。 x
 
 电平，脉冲，边沿
 233 时序逻辑电路的分类
-所有存储电路中存储单元状态的变化都是在同一时钟信号操作下同时发生的为___。
+所有存储电路中存储单元状态的变化都是在同一时钟信号操作下同时发生的为___。 x
 
 同步时序电路
 234 同步时序电路定义
-时序逻辑电路的特点是时序电路某一时刻的输出不仅取决于该时刻___的状态，还与___有关。
+时序逻辑电路的特点是时序电路某一时刻的输出不仅取决于该时刻___的状态，还与___有关。 x
 
 输入信号，电路原状态
 235 寄存器
-存放数码的器件，必须具备___和___的功能。
+存放数码的器件，必须具备___和___的功能。 x
 
 接收，寄存数码
 236 时序逻辑电路
-时序逻辑电路可以由___，___，___全面描述。
+时序逻辑电路可以由___，___，___全面描述。 x
 
 状态方程，驱动方程，输出方程
 237 计数器
-计数器是由若干个触发器构成的一种___，它按预定的顺序改变其内部各触发器的状态，以表征输入的___。
+计数器是由若干个触发器构成的一种___，它按预定的顺序改变其内部各触发器的状态，以表征输入的___。x
 
 时序电路，脉冲个数
 238 计数器
-假定有2进制计数器，要得到8进制计数器，可采用___或___将一个2计数器和4计数器连接起来，形成M进制计数器。
+假定有2进制计数器，要得到8进制计数器，可采用___或___将一个2计数器和4计数器连接起来，形成M进制计数器。 x
 
 串行进位方式，并行进位方式
 239 时序电路的分析
-时序电路的自启动是指若由于某种原因使该电路处于___时，在CP脉冲作用下会自行转入___，并开始有效循环的工作方式。
+时序电路的自启动是指若由于某种原因使该电路处于___时，在CP脉冲作用下会自行转入___，并开始有效循环的工作方式。 x
 
 无效状态，有效状态
 240 555单稳态触发器
-由于单稳态触发器电路因触发后能够保持一段暂稳状态，所以这种电路具有___。
+由于单稳态触发器电路因触发后能够保持一段暂稳状态，所以这种电路具有___。x
 
 记忆功能
 241 555定时器
-在石英晶体自激多谐振荡器电路，振荡器的振荡频率只与石英晶体本身的参数___，与电路中的ＲＣ元件参数___。
+在石英晶体自激多谐振荡器电路，振荡器的振荡频率只与石英晶体本身的参数___，与电路中的ＲＣ元件参数___。 x  
 
 有关，无关
 242 555多谐振荡器
-多谐振荡器电路又称为无稳态电路，或是自激多谐振荡器电路，这是因为这种电路工作在振荡状态，这是一种___产生电路。
+多谐振荡器电路又称为无稳态电路，或是自激多谐振荡器电路，这是因为这种电路工作在振荡状态，这是一种___产生电路。 x
 
 矩形脉冲信号
 243 555施密特触发器
-施密特触发器在电路状态转换时，通过电路内部的___使输出电压波形的边沿变得很陡。
+施密特触发器在电路状态转换时，通过电路内部的___使输出电压波形的边沿变得很陡。 x
 
 正反馈过程
 244 555施密特触发器
 施密特触发器和单稳态触发器是一种脉冲___电路。
-多谐振荡器是一种脉冲___电路。
+多谐振荡器是一种脉冲___电路。 x
 
 整形，产生
 245 555单稳态触发器
-单稳态触发器的暂稳态通常都是由___来维持的。
+单稳态触发器的暂稳态通常都是由___来维持的。 x
 
 电容的充放电
 246 555单稳态触发器
 积分型单稳态触发器用___和___及___组成的。
 
-TTL与非门， 反相器， RC积分电路
+TTL与非门， 反相器， RC积分电路 x
 247 555单稳态触发器
 积分型单稳态触发器的缺点是___的边沿比较差，这是由于电路转换过程中没有___的缘故。
 
-输出波形，正反馈
+输出波形，正反馈 x
 
 
 
@@ -1538,154 +1537,275 @@ TTL与非门， 反相器， RC积分电路
 
 ## 二、简答（难度0.8 每5分）
 254 逻辑函数的基本规则
-题目: 简述逻辑代数中求反函数的“反演规则”。
+题目: 简述逻辑代数中求反函数的“反演规则”。x
+```
 答案: 
-
 1. 将逻辑表达式中“原变量”换成“反变量”， “反变量” 换成“原变量”；
 2. +”换成“ · ”，“·”换成“+”；
 3. 常量“1”换成“0”， 常量“0”换成“1”。
-
+```
 248 数字电路的特点
-题目: 数字电路的特点是什么？
+题目: 数字电路的特点是什么？x
+```
 答案: 数字电路是处理数字信号的电路，而数字信号表示的是数字量。数字量在时间上和数量上都是离散的物理量。
+```
 249 码制
-题目: 简述原码、反码和补码的优缺点。
+题目: 简述原码、反码和补码的优缺点。x
+```
 答案: ①原码表示法的优点是简单、直观，易于和真值转换。缺点是加、减运算复杂。
 ②反码的优点是加、减运算比原码简单，但循环进位问题降低了加法运算速度。
 ③补码的优点是加、减运算简单，没有循环进位问题，运算速度快。其缺点是负数补码与真值转换时，要按位取反后，末位加“１”，不如原码、反码直观。
+```
 250 正逻辑
-题目: 在数字电路中，正逻辑约定是如何定义的？
+题目: 在数字电路中，正逻辑约定是如何定义的？x
+```
 答案: 在逻辑电路中逻辑0对应低电位;逻辑1对应高电位,这中约定为正逻辑。
+```
 251 逻辑代数
-题目: 什么叫真值表？
+题目: 什么叫真值表？x
+```
 答案: AB称输入变量，Y为输出变量。将所有可能的条件（输入）组合及对应结果（输出）列的表，称为真值表。
+```
 252 逻辑函数
-252 题目: 函数最简的条件是什么？
-答案: 表达式的项数最少，且每项中变量字母也最少。最简函数不是唯一的。最简函数可用两级与或电路实现。用门最少。
-253 题目: 简述逻辑函数及其表示方法。
-答案: 用等号将一逻辑变量和逻辑表达式连接组成一逻辑函数。逻辑函数有四种表示法：函数式，真值表，逻辑图，卡诺图。
+ 题目: 函数 最简的条件是什么？x
+
+```
+答案: 表达式的 项数最少，且每项中 变量字母 也最少。
+最简函数不是唯一的。最简函数可用两级与或电路实现。 用门最少。
+```
+253 题目: 简述 逻辑函数 及其表示方法。
+```
+答案: 用等号将一 逻辑变量 和 逻辑表达式 连接组成一逻辑函数。
+逻辑函数有四种表示法：函数式，真值表，逻辑图，卡诺图。
+```
 255 逻辑函数的基本规则
-255题目: 简述“与”逻辑，“或”逻辑和“非”逻辑。
+题目: 简述 “与”逻辑，“或”逻辑 和 “非”逻辑。x
+
+```
 答案: “与”逻辑当决定一件事情的各种条件全部具备后，这件事才能发生的逻辑关系。
 “或”逻辑在决定一件事情的几个条件中，只要有一个或几个具备，事情就会发生的逻辑关系。
 “非”逻辑结果和条件处于相反状态的逻辑关系。
+```
 253题目: 试说明1+1=2，1+1=10和1+1=1各式是什么式子?
-答案: 式1+1=2为普通代数式。
+```
+答案: 式1+1=2为普通代数式。x
 而1+1=10为二进制加法，0是本位和，1是向高一位进位，是半加器的二进制加法。
 而1+1=1是逻辑加，表示“或”逻辑。
-257题目: 怎样用真值表证明恒等式？
+```
+257题目: 怎样用真值表证明恒等式？x
+```
 答案: 首先列逻辑变量的所有组合方式，然后分别代入恒等式的两边进行运算，若各种组合对应的真值彼此均相等，则该恒等式成立。
-258 题目: 什么是逻辑函数的最小项及其性质？
+```
+258 题目: 什么是 逻辑函数的最小项 及其性质？x
+```
 答案: 逻辑函数表达式中包含全部输入变量的积项称为最小项。在最小项中，每个输入变量以原变量或反变量的出现，且仅出现一次。逻辑函数输入变量的所有组态均对应一最小项。
-259 题目: 什么是逻辑函数的最大项及其性质？
+```
+259 题目: 什么是 逻辑函数的最大项 及其性质？x
+```
 答案: 逻辑函数表达式中包含全部输入变量的和项称为最大项。在最大项中，每个输入变量以原变量或反变量的出现，且仅出现一次。 逻辑函数输入变量的所有组态均对应一最大项。
-260题目: 简述对组合逻辑电路分析的一般步骤。
+```
+260题目: 简述对组合逻辑电路分析的一般步骤。x
+```
 答案: 由“逻辑电路图”得到“逻辑表达式”；经化简后得出“真值表”，最后分析出“电路用途”。
-261 题目: 用卡诺图化简逻辑函数的依据是？
-答案: 相邻最小项可以合并，并消去互为非的一对因子。
-262 题目: 什么叫约束，约束项，约束条件？
-答案: 约束是用来说明逻辑函数中各个变量的互相制约关系。
+```
+261 题目: 用卡诺图化简逻辑函数的依据是？x
+```
+答案: 相邻最小项可以合并，并消去 互为非 的 一对因子。
+```
+262 题目: 什么叫约束，约束项，约束条件？x
+```
+答案: 约束是用来说明逻辑函数中各个 变量 的 互相制约 关系。
+```
 263 门电路
-题目: 简述门电路的概念。
-答案: 输出信号与输入信号之间存在一定逻辑关系的开关电路。
+题目: 简述 门电路 的概念。x
+```
+答案: 输出信号与输入信号之间存在 一定逻辑关系的 开关电路。
+```
 264 TTL门电路
-264 题目: 什么是传输延时？影响TTL门和CMOS门传输延时的主要因素是什么？
+题目: 什么是传输延时？影响TTL门和CMOS门传输延时的主要因素是什么？x
+
+```
 答案: 传输延时：指与非门输出波形相对于输入波形的延时。
-影响TTL门的传输延时的主要因素是晶体管的开关特性,电路结构和电路中各电阻的阻值。
-265 题目: 什么是输入噪声容限？
+影响TTL门的传输延时的主要因素是晶体管的开关特性,电路结构 和电路中各 电阻的阻值。
+```
+265 题目: 什么是输入噪声容限？ x
+```
 答案: 在保证输入高低电平基本保持不变的条件下，输入电平的允许变动范围称为输入噪声容限。
+```
 266题目: TTL三态门的输出有哪几种状态？
-答案: 高电平、低电平和高阻状态。
-268 题目: 简述TTL门电路中各晶体管的作用。
+```
+答案: 高电平、低电平和高阻状态。x
+```
+268 题目: 简述TTL门电路中各晶体管的作用。x
+```
 答案: 二极管在TTL门电路中作开关使用三极管在TTL门电路中作开关使用。
+```
 267 TTL与非门
-267题目: 简述对TTL与非门电路的输入端处理方法。
-答案: 从逻辑上看，把多余的输入端悬空，并不会影响其逻辑功能。但是，开路输入端具有高的输入阻抗，很容易受到外界的干扰信号。 因此，通常将不使用的输入端固定在一高电平上。
-270题目: TTL或非门的多余输入端如何处理？
+题目: 简述对TTL与非门电路的输入端处理方法。x
+
+```
+答案: 从逻辑上看，把多余的输入端悬空，并不会影响其逻辑功能。但是，开路输入端具有高的 输入阻抗，很容易受到外界的干扰信号。 因此，通常将不使用的输入端固定在一高电平上。
+```
+270题目: TTL或非门的多余输入端如何处理？x
+```
 答案: 可以接地或与信号输入并联。
-271题目: TTL门电路的多余输入端有时可以悬空，COMS门电路的多余输入端是否也可以这样？为什么？
+```
+271题目: TTL门电路的多余输入端有时可以悬空，COMS门电路的多余输入端是否也可以这样？为什么？x
+```
 答案: 不可以。因为CMOS门电路悬空时,输入电容上有可能充有感应电荷，如果加在输入端的感应电压过高，会使门电路损坏。
+```
 269 TTL三态门
-题目: 什么是线或逻辑？什么是三态门？
+题目: 什么是线或逻辑？什么是三态门？x
+```
 答案: 线或逻辑:指TTL门的输出端用连线并联在一起,构成的或逻辑。 
 三态门:逻辑门中除了逻辑0逻辑1两种逻辑状态外,还有第三种状态高阻状态的门电路。
+```
 272 组合逻辑电路
-272题目: 什么叫组合逻辑电路？其特点是什么？
+题目: 什么叫 组合逻辑电路？其特点是什么？x
+
+```
 答案: 输出状态只决定于同一时刻各输入变量的组合，与先前状态无关的逻辑电路。
-273题目: 简述组合逻辑电路的设计方法。
+```
+273题目: 简述 组合逻辑电路 的设计方法。x
+```
 答案:进行逻辑抽象由此写出逻辑函数式,再选定器件的类型将逻辑函数化简为需要的形式画出逻辑电路图,最后进行工艺设计.
+```
 274 时序逻辑电路
-题目: 什么叫时序逻辑电路？其特点是什么？
+题目: 什么叫时序逻辑电路？其特点是什么？x
+```
 答案: 任意时刻的输出信号不仅取决于该时刻的输入信号，而且还取决于电路原来的状态，即与以前的输入信号有关。
+```
 275 译码器
-题目: 什么叫译码器？特点是什么？
+题目: 什么叫译码器？特点是什么？x
+```
 答案: 将输入的二进制代码“翻译”成相对应的输出信号的电路。
-276 编码器
-题目: 什么叫编码器？特点是什么？
+```
+276 编码器 
+题目: 什么叫 编码器？特点是什么？ x
+```
 答案:  将被控对象或信号用特定的二进制代码来表示的电路。
+```
 277 竞争
-题目: 消除竞争冒险的方法一般有哪些？
+题目: 消除 竞争冒险 的方法一般有哪些？ x
+```
 答案: 一般有三种。 1.修改逻辑设计； 2.引入选通脉冲； 3.在输出端接滤波电容。
+```
 278 竞争冒险现象
-278 题目: 简述组合电路中的竞争—冒险现象。
-答案: 门电路的两个输入信号同时向相反的逻辑电平跳变（一个从0到1，另一个 从1到0）的现象叫竞争。由于竞争使电路输出端出现尖峰脉冲的现象叫竞争—冒险。
-279 题目: 当门电路的两个输入端同时向相反的逻辑状态转换时，是否一定有干扰脉冲产生？
+题目: 简述组合电路中的竞争—冒险现象。x
+
+```
+答案: 门电路的两个输入信号 同时向相反的逻辑 电平跳变（一个从0到1，另一个 从1到0）的现象叫竞争。
+由于竞争使电路输出端出现尖峰脉冲的现象叫竞争—冒险。
+```
+279 题目: 当门电路的两个输入端同时向相反的逻辑状态转换时，是否一定有干扰脉冲产生？x
+```
 答案: 有竞争，但不一定都会有尖峰脉冲输出。如，在与门中，若低电平信号首先上升到高电平，则有尖峰脉冲发生，反之，则没有。
-280 触发器的结构特点
+```
+280 触发器的结构特点 x
 题目: 简述触发器的结构特点。
+```
 答案: 触发器能够存储一位二进制信号的基本单元电路。具有两个能自行保持的稳定状态，用来表示逻辑状态的0和1，或二进制数的1和0根据不同的输入信号可以置0或1在输入信号消失后，能将获得的新状态保存下来。
-281 触发器功能的转换
-281 题目: RS触发器，JK触发器，D触发器，T触发器，是否可以用同一种电路结构性实现？简述理由。
-答案: 可以。同一逻辑功能的触发器可以采用不同的电路结构来实现，而某一种电路的结构形式又可以适用于制作逻辑功能不同的触发器。
-287 题目: 比较RS，JK，T三种触发器的逻辑关系。
+```
+281 触发器功能的转换 x
+题目: RS触发器，JK触发器，D触发器，T触发器，是否可以用同一种电路结构性实现？简述理由。
+
+```
+答案: 可以。同一逻辑功能的触发器可以采用不同的 电路结构 来实现，而某一种电路的结构形式又可以适用于制作逻辑功能不同的触发器。
+```
+287 题目: 比较RS，JK，T三种触发器的逻辑关系。x
+```
 答案: 将RS，JK，T 三种触发器的特性比较可发现，其中JK触发器的逻辑功能最强，它包含了RS，T触发器的所有功能，需要RS触发器时，只需要将JK当作RS端使用即可，而将JK端连在一起就构成了T触发器。
+```
 282 触发器的结构
-282 题目: 触发器的逻辑功能和电路结构的形式之间关系如何？
-答案: 同一逻辑功能的触发器可以有不同的电路结构实现。同一种电路结构的形式可以做成不同的电路逻辑实现。因此，逻辑功能与电路结构无固定的对应关系。
-288题目: 边沿触发器的“状态转换的动作特点”是什么？
+题目: 触发器的逻辑功能 和 电路结构的形式 之间关系如何？x
+
+```
+答案: 同一逻辑功能的触发器可以有不同的 电路结构 实现。同一种电路结构的形式可以做成不同的电路逻辑实现。因此，逻辑功能与电路结构 无固定的对应关系。
+```
+288题目: 边沿触发器的“状态转换的动作特点”是什么？x
+```
 答案: CP上升沿或下降沿到来瞬间对输入信号采样，并由此决定输出的状态。
+```
 283 触发器的功能转化
-题目: RS，JK，T 三种触发器逻辑功能的关系为？
+题目: RS，JK，T 三种触发器逻辑功能的关系为？x
+```
 答案: 将RS，JK，T 三种触发器的特性比较可发现，其中JK触发器的逻辑功能最强，它包含了RS，T触发器的所有功能，需要RS触发器时，只需要将JK当作RS端使用即可，而将JK端连在一起就构成了T触发器。
+```
 284 触发器
-题目: 什么是触发器？其特点是什么？
+题目: 什么是触发器？其特点是什么？ x
+```
 答案: 触发器能够存储一位二进制信号的基本单元电路。
 特点：具有两个能自行保持的稳定状态，用来表示逻辑状态的0和1，或二进制数的1和0根据不同的输入信号可以置0或1在输入信号消失后，能将获得的新状态保存下来。
-285题目: 简述基本RS触发器的动作特点。
+```
+285题目: 简述基本RS触发器的动作特点。 x
+```
 答案:  输入信号在S或R为高电平的时间内，都能直接改变输出端的状态（因为输入端的信号直接加到了输出门上），因此也称基本RS触发器为直接置（复）位触发器。
-286题目: 简述JK触发器的动作特点。
+```
+286题目: 简述JK触发器的动作特点。 x
+```
 答案: 翻转分两步：在CP＝1时，主触发器接收输入信号S，R或J，K，置成相应的状态，从触发器输出端状态不变；CP下降沿到来，从触发器按照主触发器的状态翻转。CP＝1的全部时间里，输入信号都将对主触发器起控制作用。且JK触发器主触发器若翻转，则只可能翻转一次。
+```
 289 时序逻辑电路的设计方法
-题目: 简述任意进制计数器的构成方法。
-答案: N进制计数器是指计数器的状态每经N个计数脉冲循环一次，即输入N个计数脉冲，计数器给出一个（进位）输出脉冲。故可作为分频比为N的分频器使用。若N值为２ｎ，则N进制计数器可由二进制计数器级联构成。 非２ｎ进制计数器不能由二进制计数器简单地级联构成。
+题目: 简述任意进制计数器的构成方法。 x
+```
+答案: N进制计数器是指计数器的状态每经N个 计数脉冲循环一次 ，即输入N个 计数脉冲， 计数器 给出一个（进位）输出脉冲。故可作为分频比为N的分频器使用。若N值为２ｎ，则N进制计数器可由二进制计数器级联构成。 非２ｎ进制计数器不能由二进制计数器简单地级联构成。
+```
 290 竞争
-题目: 简述时序逻辑电路中的竞争-冒险现象。
-答案: 因为时序电路中包含组合电路和存储电路两部分，所以竞争-冒险现象也包含两个方面。在同步时序电路中，由于所有触发器都在同一个时钟操作下动作，而在此之前每个触发器的输入信号均已经处于稳定状态，因而可以认为不存在竞争-冒险现象。一般认为竞争-毛象现象只存在于异步时序逻辑电路中。
+题目: 简述 时序逻辑电路 中的竞争-冒险现象。 x
+```
+答案: 因为时序电路中包含 组合电路 和 存储电路 两部分，所以竞争-冒险现象也包含两个方面。在 同步时序电路 中，由于所有触发器都在同一个时钟操作下动作，而在此之前每个触发器的输入信号均已经处于稳定状态，因而可以认为不存在竞争-冒险现象。一般认为竞争-毛象现象只存在于 异步时序逻辑电路 中。
+```
 291 时序电路逻辑电路
-题目: 根据记忆电路中存储单元状态变化的特点将时序电路分为哪几种？
-答案: 同步时序电路：所有存储电路中存储单元状态的变化都是在同一时钟信号操作下同时发生的。
+题目: 根据 记忆电路 中存储单元状态变化 的特点将 时序电路 分为哪几种？ x
+```
+答案: 同步时序电路：所有存储电路中存储单元状态的变化都是在 同一时钟信号 操作下同时发生的。
 异步时序电路：存储单元状态的变化不是同时发生的。可能有公共的时钟信号，也可能没有公共的时钟信号。
+```
 292 时序逻辑电路
-292 题目: 什么是时序图？
-答案: 为了便于用实验观察的方法检验电路的逻辑功能，还可将电路状态转换表画成电路时间波形，叫电路的时序图。
-293 题目: 比较异步时序逻辑电路的分析方法与同步逻辑的区别。
-答案: 异步时序逻辑电路的分析方法与同步时序逻辑电路不同，异步时序逻辑电路中，每次电路状态发生转换时，不是所有的触发器都有时钟信号，只有那些有时钟信号的触发器才需要用特性方程去计算次态。
-294 题目: 什么是原始状态图，一个正确的原始状态图应满足何条件？
-答案: 把对时序电路的一般文字描述变成电路的输入、输出及状态关系的图形说明而形成的状态图，原始状态图可能包含多余的状态。在正确的原始状态图中状态个数不能少，状态之间的转移关系不能错。
+题目: 什么是时序图？ x
+
+```
+答案: 为了便于用实验观察的方法 检验电路的逻辑功能，还可将 电路状态转换表 画成电路时间波形，叫电路的时序图。
+```
+293 题目: 比较 异步时序逻辑电路 的 分析方法 与 同步逻辑 的区别。 x
+```
+答案: 异步时序逻辑电路的分析方法与同步时序逻辑电路不同，异步时序逻辑电路中，每次电路状态发生转换时，不是所有的触发器都有 时钟信号，只有那些有时钟信号的触发器才需要用 特性方程去 计算次态。
+```
+294 题目: 什么是 原始状态图，一个正确的原始状态图应 满足何条件？x
+```
+答案: 把对时序电路的一般文字描述变成电 路的输入、输出 及 状态关系的图形 说明而形成的状态图，原始状态图可能包含多余的状态。在正确的原始状态图中 状态个数 不能少，状态之间的 转移关系 不能错。
+```
 295 逻辑函数
-题目: 将逻辑函数L化简成最简与-或表达式: L（A，B，C，D）=∑m（0，2，5，7，8，13，15）+∑d（10）
+题目: 将逻辑函数L化简成最简与-或表达式: L（A，B，C，D）=∑m（0，2，5，7，8，13，15）+∑d（10）x
+```
 答案: L=BD+非B乘非D
+```
 296 同步时序逻辑电路的分析
-题目: 同步时序逻辑电路的分析的目的和方法是什么？
-答案: 目的：根据其逻辑图分析出该电路实现的功能。分析方法：1、根据电路图写出驱动方程；2、根据驱动方程和触发器特性，写出状态方程；3、写出电路的输出方程。
+题目: 同步时序逻辑电路的 分析的目的 和 方法 是什么？x
+```
+答案: 目的：根据其逻辑图分析出该 电路实现的功能。
+分析方法：1、根据电路图写出 驱动方程；2、根据驱动方程和触发器特性，写出 状态方程；3、写出电路的 输出方程。
+```
 297 同步时序逻辑电路的分析方法
-题目: 同步时序网络和异步时序网络在工作方式上有何不同？
-答案: 同步时序网络有统一的时钟脉冲，只有在时钟脉冲到来时，电路的状态才发生改变，而且每一个时钟脉冲只能使电路的状态改变一次。 异步时序网络没有统一的时钟脉冲，电路状态的改变是由输入的变化直接引起的，而且每次输入变化可能使电路状态改变多次。
-298 单稳态触发器
-题目: 简述单稳态触发器具有的特点。
-答案: 第一、它有暂态和稳态两个不同的工作状态；
+题目: 同步 时序网络 和 异步 时序网络 在工作方式上有何不同？ x
+
+```
+答案: 同步时序网络有统一的 时钟脉冲，只有在时钟脉冲到来时，电路的状态才发生改变，而且每一个时钟脉冲只能使电路的状态 改变一次。 
+异步时序网络没有统一的 时钟脉冲，电路状态的改变是由输入的变化直接引起的，而且每次输入变化可能使电路状态 改变多次。
+```
+298 单稳态触发器 
+题目: 简述 单稳态触发器 具有的特点。x
+
+```
+答案: 第一、它有 暂态和稳态 两个不同的 工作状态；
 第二、在外界触发脉冲作用下，能从稳态翻转到暂稳态，在暂稳态维持一段时间后有返回稳态；
-第三、暂稳态维持时间的长短取决于电路本身的参数，与触发脉冲的宽度和幅度无关。单稳态触发器广泛应用于脉冲整形，延时，以及定时等。
+第三、暂稳态维持时间的长短取决于电路本身的参数，与触发脉冲的宽度和幅度无关。单稳态触发器广泛应用于 脉冲整形，延时，以及定时等。
+```
+
 299 脉冲整形电路
-题目: 获得矩形脉冲波形的两种方法是什么？
-答案: 一种是利用各种形式的**多谐振荡器**直接产生所需要的矩形脉冲。另一种是通过各种整形电路将已有的周期变化的波形转化为需要的矩形脉冲。
+题目: 获得矩形脉冲波形的两种方法是什么？ x
+
+```
+答案: 一种是利用各种形式的 多谐振荡器 直接产生所需要的 矩形脉冲。
+另一种是通过各种 整形电路 将已有的周期变化的波形转化为需要的 矩形脉冲。
+```
