0910 教师节 周四 晴 21.2

--- a/SoftwareEngineering/数字电路/1.md
+++ b/SoftwareEngineering/数字电路/1.md
@@ -2,45 +2,44 @@
 
 ## 一、单选题（难度0.4， 每题2分）
 
-029 组合逻辑电路的设计方法
-当编码器 74LS147 的输入端 I1 、 I5 、 I6 、 I7 为低电平，其余输入端为高电平时，输出信号为
+### 029 组合逻辑电路的设计方法
+当编码器 74LS147 的输入端 I1 、 I5 、 I6 、 I7 为低电平，其余输入端为高电平时，输出信号为C
 A 1110
 B 1010
 **C 1001**
 D 1000
-C
-007 与逻辑运算
-下列代数是不属于与逻辑运算的是
+
+### 007 与逻辑运算
+下列代数是不属于与逻辑运算的是C
 A Y＝A · B
 B Y＝B· B
 **C Y＝A+B**
 D Y＝A· BA
-C
-001 数字电路的特点
-数字电路是工作在数字信号下的电子电路，其数字信号特点是:
+
+### 001 数字电路的特点
+数字电路是工作在数字信号下的电子电路，其数字信号特点是:A
 
 **A 时间和数量上都是离散的**
 B 时间离散，数量上连续
 C 时间连续，数量上离散
 D 时间和数量都是连续
-A
-002 数制
-十进制数为16，转换为二进制代码为( )
+
+### 002 数制
+十进制数为16，转换为二进制代码为(D )
 A 11110
 B 10001
 C 11000
 **D 10000**
-D
+
 003 数制
 不同进制数的转换，有直接选择两个相等的不同进制的数
 也有给出几个不同进制数比大小
-在下列一组数中，最大数是:
+在下列一组数中，最大数是: A
 
 **A 二进制数11101101.1**
 B 十制数231
 C 八制数124.4
 D 十六进制数4C.2
-A
 
 | 转换代码图表 |      |      |      |      |      |      |      |      |
 | ------------ | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
@@ -54,133 +53,133 @@ A
 | 十六进制     | 8    | 9    | A    | B    | C    | D    | E    | F    |
 | 二进制       | 1000 | 1001 | 1010 | 1011 | 1100 | 1101 | 1110 | 1111 |
 
-004 码制
-十进制数1的8421码为
+### 004 码制
+十进制数1的8421码为 A
 
 **A 1**
 B 10
 C 1000
 D 100
-A
+
 005 码制
-二进制数11101101.1其对应的余三码是
+二进制数11101101.1其对应的余三码是 D
 A 10101111010.1
 B 10101101011.1
 C 10111101010.1
 **D 10101101010.1**
-D
-006 逻辑代数
-与代数式A+AB相等的是
+
+### 006 逻辑代数
+与代数式A+AB相等的是B
 
 A B+A
-B A
-**C B**
+**B A**
+C B
 D B（A+B）
-B
-008 与逻辑运算
-已知输入A，B为与逻辑关系，当输出为1时，AB可能的值是
+
+### 008 与逻辑运算
+已知输入A，B为与逻辑关系，当输出为1时，AB可能的值是 B
 
 A A=1，B=0
 **B A=1，B=1**
 C A=0，B=0
 D A=0，B=1
-B
+
 009 或逻辑运算
-在决定事物结果的诸条件中只要有任何一个满足，结果就会发生为
+在决定事物结果的诸条件中只要有任何一个满足，结果就会发生为 B
 
 A 逻辑乘
 **B 逻辑加**
 C 逻辑反
 D 以上说法都不对
-B
+
 010 非逻辑运算
-实现非逻辑运算的单元电路为
+实现非逻辑运算的单元电路为 D
 
 A 转换器
 B 比较器
 C 发生器
 **D 反相器**
-D
+
 011 正逻辑与负逻辑
-门电路输入输出高低电平赋值为（ ）为正逻辑
+门电路输入输出高低电平赋值为（ ）为正逻辑 D
 
 A 0
 B 11
 C 1
 **D 10**
-D
+
 012 逻辑函数的基本公式
-基本逻辑电路，不包括
+基本逻辑电路，不包括 D
 
 A “与”门
 B “或”门
 C “非”门
 **D “与或”门**
-D
+
 013 逻辑函数
-用卡诺图化简时,若对每个方格群尽可能选大，则在最简表达式中
+用卡诺图化简时,若对每个方格群尽可能选大，则在最简表达式中B
 
 A 与项的个数少
 B 每个与项含的变量个数少x
 C 化简结果具有唯一性
 D 结果不唯一
-B
-014 二极管与门电路
-下列选项中属于二极管与门电路的缺点是
+
+### 014 二极管与门电路
+下列选项中属于二极管与门电路的缺点是 C
 
 A 结构简单
 B 成本低
 **C 作输出时发生电平漂移**
 D 输入电流过大
-C
+
 015 二极管或门电路
-二极管或门电路主要用于
+二极管或门电路主要用于 A
 
 A 集成电路内部的逻辑单元 x
 B 集成电路外部的逻辑单元
 C 分立元件门电路内部的逻辑单元
 D 分立元件门电路外部的逻辑单元
-A
-016 三极管非门电路(反相器)
-三极管工作在深饱和状态，以使输出电平接近于零，输入为
+
+### 016 三极管非门电路(反相器)
+三极管工作在深饱和状态，以使输出电平接近于零，输入为 B
 
 A 低电平
 B 高电平 x
 C 与输入电平无关 
 D 以上说法都不对
-B
+
 017 三极管非门
-三极管开关应用时，相当于开关断开时，该三极管处于（ ）
+三极管开关应用时，相当于开关断开时，该三极管处于（C ）
 
 A 放大区
 B 饱和区
 C 截止区 x
 D 击穿区
-C
-018 TTL集成门电路
-TTL集成门电路传输延迟时间是的输出波形比输入
+
+### 018 TTL集成门电路
+TTL集成门电路 传输延迟 时间是的输出波形比输入 B
 
 A 超前
 B 滞后 x
 C 无影响
 D 不能确定
-B
+
 019 TTL集电极开路门(OC门)
-下列门电路输出端可以悬空的是
+下列门电路输出端可以悬空的是 C
 
 A 普通的CMOS门
 B 漏极开路的CMOS门
 C TTL电路的OC门 x
 D 以上电路都不行
-C
+
 020 TTL集成门电路
-对于ＴＴＬ门电路，逻辑低电平时输入端电阻与关门电阻的关系为
+对于ＴＴＬ门电路，逻辑低电平时输入端电阻与关门电阻的关系为 B
 
 A 大于
 B 小于 x
 C 等于
 D 无法确定
-B
+
 021 TTL集电极开路门(OC门)
 CMOS与非门多余输入端应该
 
@@ -189,607 +188,606 @@ A 接地
 
 B
 022 TTL集电极开路门(OC门)
-三极管开关应用时，相当于开关接通时，该三极管处于（ ）
+三极管开关应用时，相当于开关接通时，该三极管处于（B ）
 
 A 放大区
 B 饱和区 x
 C 截止区
 D 击穿区
-B
-023 组合逻辑电路的定义
-组合逻辑电路任意时刻的输出信号取决于
+
+### 023 组合逻辑电路的定义
+组合逻辑电路任意时刻的输出信号取决于 B
 
 A 该时刻前的输入信号
-B 该时刻的输入信号 x
+B 该时刻的 输入信号 x
 C 该时刻后的输入信号
 D 电路原来的状态
-B
+
 024 组合逻辑电路的结构
-组合逻辑电路肯定没有以下哪种元件
+组合逻辑电路肯定 没有 以下哪种元件 D
 
 A 与门
 B 非门
 C 或非门
 D 反馈连接 x
-D
+
 025 组合逻辑电路的分类
-下列电路不属于组合逻辑电路的是
+下列电路不属于组合逻辑电路的是 C
 
 A 只读存储器
 B 数据选择器
 C 放大器 x
 D 加法器
-C
+
 026 组合逻辑电路
-下列电路属于组合逻辑电路的是
+下列电路属于组合逻辑电路的是 A
 
 A 全加器 x
 B 寄存器
 C 计数器
 D 触发器
-A
+
 027 组合逻辑电路的分析方法
-全加器是属于（ ）电路
+全加器是属于（C ）电路
 
 A 时序逻辑电路
 B 寄存器
 C 组合逻辑电路 x
 D 以上说法都不对
-C
+
 028 组合逻辑电路的分析方法
-若所设计的编码器是将 31 个一般信号转换成二进制代码，则输出应是一组 N=（ ）位的二进制代码
+若所设计的编码器是将 31 个一般信号转换成二进制代码，则输出应是一组 N=（ C ）位的二进制代码
 
 A 3
 B 4
 C 5 x
 D 6
-C
-030 编码器
-当优先编码器的几个输入端（ ）出现有效信号时，其输出端给出优先权较高的输入信号的代码
+
+### 030 编码器
+当优先编码器的几个输入端（ A ）出现有效信号时，其输出端给出优先权较高的输入信号的代码
 
 A 同时 x
 B 先后
 C 与次序无关
 
-A
+
 031 加法器
-全加器有（ ）个输出信号
+全加器有（ C ）个输出信号
 
 A 4
 B 3
 C 2 x
 D 1
-C
+
 032 加法器
-全加器有（ ）个输入信号
+全加器有（ B ）个输入信号
 
 A 4
 B 3 x
 C 2
 D 1
-B
+
 033 数值比较器
-多位数值比较器比较两数大小顺序是（ ）
+多位数值比较器比较两数大小顺序是（ A ）
 
 A 自高而低 x
 B 自低而高
 C 两种顺序都可以
 D 无法判断
-A
+
 034 编码器
-编码电路和译码电路中，（ ）电路的输出是二进制代码
+编码电路和译码电路中，（ A ）电路的输出是二进制代码
 
 A 编码 x
 B 译码
 C 编码和译码
 
-A
-035 译码器
-在大多数情况下，对于译码器而言
+
+### 035 译码器
+在大多数情况下，对于译码器而言 A
 
 A 其输入端数目少于输出端数目 x
 B 其输入端数目多于输出端数目
 C 其输入端数目与输出端数目几乎相同
 
-A
+
 036 译码器
-3个输入的译码器，最多可译码出（ ）路的输出
+3个输入的译码器，最多可译码出（ D ）路的输出
 
 A 2
 B 4
 C 6
 D 8 x
-D
+
 037 译码器
-下列电路中，（ ）电路的功能是将输入信号转换成对应的二进制代码
+下列电路中，（ A ）电路的功能是将 输入信号 转换成对应的 二进制代码
 
 A 编码器 x
 B 寄存器
 C 数据选择器
 D 加法器
-A
+
 038 译码器
-将BCD代码翻译成十个对应的输出信号的电路有（ ）个输入端
+将BCD代码翻译成十个对应的输出信号的电路有（ B ）个输入端
 
 A 3
 B 4 x
 C 5
 D 6
-B
-039 竞争的概念
-按竞争的结果，下列选项正确的是
+
+### 039 竞争的概念
+按竞争的结果，下列选项正确的是 B
 
 A 冒险竞争
 B 临界竞争 x
 C 竟争
 D 以上说法都对
-B
+
 040 冒险的类型
-当多个输入变量发生变化时，常常会发生
+当多个输入变量发生变化时，常常会发生 D
 
 A 静态险象
 B 动态险象
 C 函数险象
 D 逻辑险象 x
-D
+
 041 冒险的概念
-下列选项不能消除竞争冒险的是
+下列选项不能消除竞争冒险的是 C
 
 A 接入滤波电容
 B 引入选通脉冲
 C 改变输入信号 x
 D 修改逻辑设计
-C
-042 触发器的功能
-触发器具有几个能自行保持的稳定状态，用来表示逻辑状态
+
+### 042 触发器的功能
+触发器具有几个能自行保持的稳定状态，用来表示逻辑状态 B
 
 A 1个
 B 2个 x
 C 3个
 D 4个
-B
+
 043 触发器的现态和次态
-基本RS触发器的输入R＝0，S＝1，为一状态，当S回到0时，电路为
+基本RS触发器的输入R＝0，S＝1，为一状态，当S回到0时，电路为 B
 
 A 0状态
 B 1状态 x
 C 无法确定
 D 以上说法都不对
-B
+
 044 触发器的现态和次态
-同步触发器的同步信号为零时，现态为1，次态为
+同步触发器的同步信号为零时，现态为1，次态为 C
 
 A 无法确定
 B 0
 C 1 x
 D 以上说法都不对
-C
+
 045 基本RS触发器
-基本RS触发器输入R=1，S=0时输出Q为
+基本RS触发器输入R=1，S=0时输出Q为 A
 
 A 0 x
 B 1
 C 无法判断
 D 以上说法都不对
-A
+
 046 同步触发器
-同步触发器在（ ）信号到达时才按输入信号改变状态
+同步触发器在（ C ）信号到达时才按输入信号改变状态
 
 A 无限制
 B 异步
 C 同步 x
 D 以上说法都对
-C
+
 047 同步触发器
-同步触发器CP=1时，若输入信号多次发生变化，触发器状态多次发生翻转，则可知
+同步触发器CP=1时，若输入信号多次发生变化，触发器状态多次发生翻转，则可知 A
 
 A 抗干扰能力差 x
 B 抗干扰能力好
 C 与抗干扰能力无关
 D 无法判断
-A
+
 048 主从RS触发器
-主从RS触发器时钟信号相位的关系是
+主从RS触发器时钟信号相位的关系是 B
 
 A 相同
 B 相反 x
 C 无关
 D 无法确定
-B
+
 049 主从RS触发器
-主从RS触发器在CP的一个周期中触发器的输出状态能改变（ ）
+主从RS触发器在CP的一个周期中触发器的输出状态能改变（ A ）
 
 A 1次 x
 B 2次
 C 3次
 D 任意次
-A
+
 050 触发器的特点
-时钟有效边沿到来时，输出状态和输入信号相同的触发器叫
+时钟有效边沿到来时，输出状态 和 输入信号 相同的触发器叫 B
 
 A RS触发器
 B D触发器 x
 C T触发器
 D JK触发器
-B
+
 051 触发器的特点
-单稳态触发器有（ ）个稳定状态
+单稳态触发器有（ B ）个稳定状态
 
 A 0
 B 1 x
 C 2
 D 3
-B
+
 052 触发器的功能分类和转换
-在 CP 脉冲作用下，只具有置0、置1和保持功能的触发器是（ ）触发器
+在 CP 脉冲作用下，只具有置0、置1和保持功能的触发器是（ D ）触发器
 
 A JK触发器
 B T触发器
 C D触发器
 D RS触发器 x
-D
+
 053 主从JK触发器
-选出输入RS使主从JK触发器的状态是确定的
+选出输入RS使主从JK触发器的状态是确定的 D
 
 A R＝1，S＝0
 B R＝0，S＝1
 C R＝1，S＝1
 D R＝0，S＝0 x
-D
+
 054 主从JK触发器
-主从JK触发器在CP＝（ ）时，接收J、K端信号
+主从JK触发器在CP＝（ A ）时，接收J、K端信号
 
 A 1 x
 B 0
 C 无法确定
 
-A
+
 055 主从JK触发器
-主从JK触发器在CP＝1时，主触发器接收输入信号S，R或J，K置成相应的状态，从触发器输出端状态（ ）
+主从JK触发器在CP＝1时，主触发器接收输入信号S，R或J，K置成相应的状态，从触发器输出端状态（ C ）
 
 A 改变
 B 相反
 C 不变 x
 D 无法确定
-C
+
 056 边沿触发器
-在时钟脉冲为1期间，选出允许输入信号改变的触发器
+在时钟脉冲为1期间，选出允许输入信号改变的触发器 C
 
 A 主从RS触发器
 B 主从JK触发器
 C 主从型D触发器 x
 D 都不对
-C
+
 057 触发器逻辑功能的转换
-输入信号为（ ）端的情况下，JK触发器的逻辑功能最为完善
+输入信号为（ B ）端的情况下，JK触发器的逻辑功能最为完善
 
 A 1端
 B 2端 x
 C 3端
 D 大于3端
-B
+
 058 触发器逻辑功能的转换
-在 CP 脉冲作用下只具有保持和翻转功能的触发器是（ ）触发器
+在 CP 脉冲作用下只具有保持和翻转功能的触发器是（ B ）触发器
 
 A JK触发器
 B T触发器x
 C D触发器
 D RS触发器
-B
+
 059 不同类型触发器相互的转换
-将JK触发器转换成T触发器，则JK值为
+将JK触发器转换成T触发器，则JK值为 A
 
 A T x
 B T+1
 C J
 D K
-A
+
 060 不同类型触发器相互的转换
-输出状态和输入信号相同的触发器叫（ ）触发器
+输出状态和输入信号相同的触发器叫（ C ）触发器
 
 A JK触发器
 B T触发器
 C D触发器 x
 D RS触发器
-C
+
 061 触发器逻辑功能的转换
-输入信号为（ ）端的情况下，D触发器用起来最方便
+输入信号为（ A ）端的情况下，D触发器用起来最方便
 
 A 1端 x
 B 2端
 C 3端
 D 大于4端
-A
-062 时序逻辑电路的定义
-下列不属于时序逻辑电路的是
+
+### 062 时序逻辑电路的定义
+下列不属于时序逻辑电路的是 A
 
 A 全加器 x
 B 寄存器 
 C 计数器
 D 触发器
-A
+
 063 时序逻辑电路的结构
-时序逻辑电路的结构包括
+时序逻辑电路的结构包括 D
 
 A 组合逻辑电路
 B 记忆电路
 C 存储电路
 D 以上说都对 x
-D
+
 064 时序逻辑电路的结构
-在以下各种电路中，属于时序电路的有
+在以下各种电路中，属于时序电路的有 A
 
 A 计数器 x
 B 全加器
 C 数值比较器
 D 半加器
-A
+
 065 同步时序逻辑电路的分析方法
-对于同步时序电路而言
+对于同步时序电路而言 C
 
 A 电路由同一种类型触发器构成
 B 电路中触发器必须具有复位功能
 C 电路中各触发器由同一时钟触发 x
 D 以上说法都不对
-C
+
 066 时序逻辑电路的分类
-同一时序逻辑，不同状态设置方案所得原始状态图中状态数之所以不同是因为（ ）的设计结果中存在着多余状态
+同一时序逻辑，不同状态设置方案所得原始状态图中状态数之所以不同是因为（ A ）的设计结果中存在着多余状态
 
 A 状态数目较多 x
 B 状态数目较少
 C 与状态数目较无关
 
-A
+
 067 时序逻辑电路的分类
-时序逻辑电路通常由门电路和（ ）组成
+时序逻辑电路通常由门电路和（ A ）组成
 
 A 存储电路 x
 B 寄存器
 C 译码器
 D 加法器
-A
-068 寄存器
-一个n位数据寄存器需用（ ）个触发器
+
+### 068 寄存器
+一个n位数据寄存器需用（  C ）个触发器
 
 A n+1个
 B 0个
 C n个 x
 D 无法确定
-C
+
 069 寄存器
-n个触发器构成的寄存器可存放（ ）个逻辑变量的值
+n个触发器构成的寄存器可存放（ C ）个逻辑变量的值
 
 A 1个
 B 0个
 C n个 x
 D 无法确定
-C
+
 070 时序逻辑电路的分析方法
-D触发器也可以构成寄存器电路，当输入端D为0时，再加一个移位正脉冲，D触发器输出端Q=（ ）
+D触发器也可以构成寄存器电路，当输入端D为0时，再加一个移位正脉冲，D触发器输出端Q=（B ）
 
 A 1
 B 0 x
 C 1
 D 10
-B
+
 071 寄存器
-寄存器由触发器组成，一个触发器能存放()位二进制数码
+寄存器由触发器组成，一个触发器能存放()位二进制数码 A
 A 1 x
 B 0
 C 2
 D 无法确定
-A
+
 072 寄存器
-对于串行输入的寄存器电路，如果要输入一个8位的数码，必须通过（ ）个CP脉冲的作用才将8位数码输入
+对于串行输入的寄存器电路，如果要输入一个8位的数码，必须通过（ D ）个CP脉冲的作用才将8位数码输入
 
 A 4
 B 3
 C 2
 D 1 x
-D
+
 073 或逻辑运算
-已知输入A，B为或逻辑关系，当输出为0时，AB可能的值是
+已知输入A，B为或逻辑关系，当输出为0时，AB可能的值是 C
 
 A A=1,B=0
 B A=1,B=1
 C A=0,B=0 x
 D A=0,B=1
-C
+
 074 移位寄存器
-移位寄存器级连方式
+移位寄存器级连方式 D
 
 A 左移
 B 右移
 C 双向
 D 以上选项都正确 x
-D
+
 075 移位寄存器
-移位寄存器的触发器必须是
+移位寄存器的触发器必须是 B
 
 A 主从型
 B 边沿型 x
 C RS型
 D A，B都正确
-B
+
 076 移位寄存器
-一个4位移位寄存器可以构成最长计数器的长度是
+一个4位移位寄存器可以构成最长计数器的长度是 D
 
 A 8
 B 12
 C 15
 D 16 x
-D
-077 计数器
-异步计数器在做“加1”“减1”记数时，采取从（ ）工作方式
+
+### 077 计数器
+异步计数器在做“加1”“减1”记数时，采取从（ A ）工作方式
 
 A 低位到高位 x
 B 高位到低位
 C 无区别
 D 无法确定
-A
+
 078 计数器
-N进制计数器是指计数器的状态每经（ ）个计数脉冲循环一次
+N进制计数器是指计数器的状态每经（ B ）个计数脉冲循环一次
 
 A N-1
 B N x
 C N+1
 D 2N
-B
+
 079 时序逻辑电路的分析方法
-对于JK触发器，无论其原处何态，只要（ ）相同，则所需激励相同
+对于JK触发器，无论其原处何态，只要（ B ）相同，则所需激励相同
 
 A 现态
 B 次态 x
 C 输入
 D 输出
-B
+
 080 时序逻辑电路的分析方法
-对于D触发器，无论其原处何态，只要（ ）相同，则所需激励相同
+对于D触发器，无论其原处何态，只要（ B ）相同，则所需激励相同
 
 A 现态
 B 次态 x
 C 输入
 D 输出
-B
+
 081 时序逻辑电路的分析方法
-四个触发器组成的环形计数器最多有（ ）个有效状态
+四个触发器组成的环形计数器最多有（ D ）个有效状态
 
 A 4
 B 6
 C 8
 D 16 x
-D
+
 082 计数器
-由三个触发器构成的五进制计数器有（ ）个无效状态
+由三个触发器构成的五进制计数器有（  C ）个无效状态
 
 A 1
 B 2
 C 3 x
 D 4
-C
+
 083 计数器
-5进制计数器分频比为
+5进制计数器分频比为 B
 
 A 4
 B 5 x
 C 6
 D 10
-B
+
 084 单稳态触发器
-单稳态触发器具有（ ）不同的工作状态
+单稳态触发器具有（ C ）不同的工作状态
 
 A 0
 B 1
 C 2 x
 D 3
-C
-085 555定时器
-具有脉冲鉴幅能力的触发器是
+
+### 085 555定时器
+具有脉冲鉴幅能力的触发器是 A
 
 A 施密特触发器 x
 B 单稳态触发器
 C 集成单稳态触发器
 D 以上选项都正确
-A
+
 086 555单稳态触发器
-用CMOS门电路和RC微分电路组成的是（ ）触发器
+用CMOS门电路和RC微分电路组成的是（D ）触发器
 
 A 微分触发器
 B 积分单稳态触发器
 C 集成单稳态触发器
 D 微分单稳态触发器 x
-D
+
 087 555单稳态触发器
-与微分型单稳态触发器相比较，积分型单稳态触发器抗干扰能力
+与微分型单稳态触发器相比较，积分型单稳态触发器抗干扰能力 A
 
 A 强 x
 B 弱
 C 相等
 D 无法判断
-A
+
 088 555单稳态触发器
-由555定时器接成的单稳态触发器当电路充电后停在（ ）的状态，三极管截止
+由555定时器接成的单稳态触发器当电路充电后停在（ A ）的状态，三极管截止
 
 A Q=1 x
 B Q=0
 C Q=1或Q=0
 D都不行
-A
+
 089 555定时器
-下列电路中，属于脉冲产生电路的是
+下列电路中，属于脉冲产生电路的是 B
 
 A单稳态触发器
 B多谐振荡器 x
 C施密特触发器
 D编码器
-B
+
 090 555定时器
-电压传输特性曲线具有滞回特性的是
+电压传输特性曲线具有滞回特性的是 A
 
  A 施密特触发器
 B 单稳态触发器
 C 多谐振荡器
 
-A
+
 091 555定时器
-COMS门电路，由于其阈值电压约为电源电压的一半，因而
+COMS门电路，由于其阈值电压约为电源电压的一半，因而 C
 
 A 其噪声容限较TTL电路小
 B 抗干扰能力较TTL电路稍差
 C 其噪声容限较TTL电路大
 D 无法比较
-C
 
 ## 二、多选（难度0.4 每题3分）
-092 数字电路的分类
-在以下选项中选出为数字电路的: x
+### 092 数字电路的分类
+在以下选项中选出为数字电路的:  B|C|D
 
 A、运算放大器
 B、计数器
 C、译码器
 D、加法器
-B|C|D
-093 逻辑代数
-在以下选项中选出逻辑表达式的组成部分: x
+
+### 093 逻辑代数
+在以下选项中选出逻辑表达式的组成部分: A|B|C|D
 
 A、逻辑变量
 B、逻辑常数0与1
 C、逻辑运算符
 D、括号
-A|B|C|D
-094 与逻辑运算
-已知输入A，B为与逻辑关系，当输出为0时，AB可能的值是: x
+
+### 094 与逻辑运算
+已知输入A，B为与逻辑关系，当输出为0时，AB可能的值是: A|C|D
 
 A、A=1，B=0
 B、A=1，B=1
 C、A=0，B=0
 D、A=0，B=1
-A|C|D
+
 095 二极管与门电路
-下列选项中属于二极管与门电路的缺点是: x
+下列选项中属于二极管与门电路的缺点是: C|D
 
 A、结构简单
 B、成本低
 C、作输出时发生电平漂移
 D、负载电阻的改变会影响输出电平的高低
-C|D
+
 096 二极管或门电路
-下列选项中属于二极管或门电路的特点是: x
+下列选项中属于二极管或门电路的特点是:  A|B
 
 A、二极管或门存在电平漂移问题
 B、这种电路结构只用于集成电路内部的逻辑单元
 C、结构简单
 D、以上说法都不对
-A|B
+
 097 三极管非门电路(反相器)
-当输入为高电平时，下列选项正确的是: x
+当输入为高电平时，下列选项正确的是: A|B|D
 
 A、三极管工作在深饱和状态
-B、三极管的基极电流大于深饱和时候的基极电流
-C、三极管的基极电流小于深饱和时候的基极电流
+B、三极管的基极电流大于深饱和时候的 基极电流
+C、三极管的基极电流小于深饱和时候的 基极电流
 D、输出电平接近于零
-A|B|D
-098 TTL集成门电路
+
+### 098 TTL集成门电路
 下列选项中属于TTL反向器的动态特性传输延迟时间原因的是:x
 
 A、管电阻
@@ -798,54 +796,54 @@ C、响应时间
 D、以上说法都对
 A|B
 099 TTL集成门电路
-下列选项属于TTL集成门电路交流噪声容限大的原因的是: x
+下列选项属于TTL集成门电路交流噪声容限大的原因的是: A|B
 
 A、三极管的开关时间
 B、分布电容的充放电过程
 C、传输延迟时间
 D、输入电流的大小
-A|B
-100 组合逻辑电路的结构
-以下哪种元件是组合逻辑电路可能的组成部分: x
+
+### 100 组合逻辑电路的结构
+以下哪种元件是组合逻辑电路可能的组成部分:A|B
 
 A、与门
 B、异或门
 C、存储单元
 D、反馈连接
-A|B
+
 101 组合逻辑电路的分类
-下列信号属于全加器的输出的是: x
+下列信号属于全加器的输出的是: A|B|C
 
 A、被加数
 B、加数
 C、低位进位
 
-A|B|C
+
 102 组合逻辑电路的分类
-以下电路属于组合逻辑电路的是: x
+以下电路属于组合逻辑电路的是:  A|B|C|D
 
 A、数据选择器
 B、只读存储器
 C、编码器
 D、比较器
-A|B|C|D
+
 103 竞争的概念
-按竞争的结果分类，下列选项正确的是: x
+按竞争的结果分类，下列选项正确的是: A|B
 
 A、非临界竞争
 B、临界竞争
 C、竟争
 D、以上说法都对
-A|B
-104 冒险的概念
-按冒险的险象分类，下列选项正确的是: x
+
+### 104 冒险的概念
+按冒险的险象分类，下列选项正确的是:  A|B
 
 A、静态险象
 B、动态险象
 C、函数险象
 D、以上说法都正确
-A|B
-105 触发器的功能
+
+### 105 触发器的功能
 选出触发器的触发方式: x
 
 A、电平
@@ -854,270 +852,261 @@ C、边沿
 D、以上选项都正确
 A|B|C|D
 106 触发器的功能
-下列哪些触发器（ ）无论其原处何态，只要次态相同，则所需激励相同。x
+下列哪些触发器（ ）无论其原处何态，只要次态相同，则所需激励相同。 A|B|C
 
 A、D触发器
 B、RS触发器
 C、JK触发器
 D、T触发器
-A|B|C
+
 107 同步触发器
-下列信号表示同步触发器的同步信号的是: x
+下列信号表示同步触发器的同步信号的是: A|B|C|D
 
 A、时钟脉冲信号
 B、时钟信号
 C、时钟
 D、CP
-A|B|C|D
+
 108 T触发器
-T触发器所需激励值取决于: x
+T触发器所需激励值取决于:  A|B
 
 A、现态
 B、次态的异或
 C、次态
 D、现态的异或
-A|B
+
 109 同步触发器
-同步触发器在CP＝1的全部时间里，（ ）变化都能引起触发器输出端状态的改变。 x
+同步触发器在CP＝1的全部时间里，（ ）变化都能引起触发器输出端状态的改变。A|B|C
 
 A、S
 B、R
 C、S或R
 D、都不会改变
-A|B|C
+
 110 主从JK触发器
-主从JK触发器CP＝1的全部时间里，对主触发器起控制作用输入信号为:  x
+主从JK触发器CP＝1的全部时间里，对主触发器起控制作用输入信号为: A|B|C|D
 
 A、J
 B、K
 C、J或K
 D、J和K
-A|B|C|D
-111 时序逻辑电路的分析 x
+
+111 时序逻辑电路的分析  A|B|C
 状态表化简的原理:
 
 A、完备或覆盖性
 B、最小性
 C、封闭性
 
-A|B|C
+
 112 时序逻辑电路的定义
-下列属于时序逻辑电路的是: x
+下列属于时序逻辑电路的是:  A|B|C|D
 
 A、触发器
 B、寄存器
 C、计数器
 D、移位寄存器
-A|B|C|D
-113 寄存器
-寄存器数据输出方式: x
+
+### 113 寄存器
+寄存器数据输出方式: A|B
 
 A、并行
 B、串行
 C、移位
 D、以上说法都正确
-A|B
+
 114 移位寄存器
-移位寄存器级连方式: x
+移位寄存器级连方式:  A|B|C|D
 
 A、左移
 B、右移
 C、双向
 D、以上说法都正确
-A|B|C|D
+
 115 寄存器
-寄存器与寄存器外部的数据交换型式:x
+寄存器与寄存器外部的数据交换型式: A|B|C|D
 
 A、并入并出
 B、串入串出
 C、并入串出
 D、串入并出
-A|B|C|D
+
 116 计数器
-在五进制计数器电路中要用（ ）个触发器，在三进制计数器电路中要用（ ）个触发器。 x
+在五进制计数器电路中要用（ ）个触发器，在三进制计数器电路中要用（ ）个触发器。  B|C
 
 A、4
 B、3
 C、2
 D、1
-B|C
+
 117 寄存器
-寄存器必须附加组合逻辑电路以实现数据的（ ）。 x
+寄存器必须附加组合逻辑电路以实现数据的（ A|B|C ）。 
 
 A、保持
 B、更新
 C、移动
 D、以上选项都不对
-A|B|C
+
 118 时序逻辑电路的结构
-时序逻辑电路可以由选项中哪些方程全面描述:x
+时序逻辑电路可以由选项中哪些方程全面描述:A|B|C
 
 A、状态方程
 B、驱动方程
 C、输出方程
 D、以上选项都不对
-A|B|C
-119 计数器
-能由二进制计数器简单地级联构成的计数器为:  x
+
+### 119 计数器
+能由二进制计数器简单地级联构成的计数器为:  A|C
 
 A、4进制计数器
 B、6进制计数器
 C、8进制计数器
 D、10进制计数器
-A|C
+
 120 计数器
-有10进制计数器，要得到5进制计数器可采用（ ）实现。x
+有10进制计数器，要得到5进制计数器可采用（ ）实现。C|D
 
 A、并行进位方式
 B、串行进位方式
 C、置数法
 D、置零法
-C|D
+
 121 用555定时器构成单稳态触发器
 在单稳态触发器的输入端触发电路中，可以采用基极触发电路，也可以采用集电极触发电路。
-根据有效触发脉冲的极性不同又有: x
+根据有效触发脉冲的极性不同又有: A|B
 
 A、正尖顶脉冲触发
 B、负尖顶脉冲触发
 C、无法确定
 
-A|B
+
 122 概述
-描述矩形脉冲的主要参数: x
+描述 矩形脉冲 的主要参数: A|B|C|D
 
 A、脉冲幅度
 B、脉冲周期
 C、脉冲宽度
 D、上升时间
-A|B|C|D
-123 555定时器
-555定时器能方便的组成如下哪些器件: x
+
+### 123 555定时器
+555定时器能方便的组成如下哪些器件: A|B|C|D
 
 A、施密特触发器
 B、单稳态触发器
 C、多谐振荡器
 D、以上都可以
-A|B|C|D
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 ## 三、判断（难度0.4 每题2分）
 
-124 数字电路的特点
-数字电路处理数字信号，对于模拟信号要通过变换电路，将模拟信号转换成数字信号之后才能送入数字电路中。x
+### 124 数字电路的特点
+````
+数字电路 处理 数字信号，对于 模拟信号 要通过 变换电路，将模拟信号转换成数字信号之后才能送入数字电路中。对
+````
 
-对
 125 数字电路的特点
-在时间上离散的物理量都是数字量。x
+```
+在时间上 离散的物理量 都是数字量。错
+```
 
-错
-126 数制
-二进制加、减、乘与10进制规则相同，进借位权相同。x
+### 126 数制
+```
+二进制加、减、乘与10进制规则相同，进 借位权 相同。错
+```
 
-错
 127 数制
-负数的原码、反码、补码的符号位均为1，数值位为负数本身。x
+```
+负数的原码、反码、补码的符号位均为1，数值位为负数本身。错
+```
 
-错
-128 逻辑函数
-一个逻辑函可存在不同形式的逻辑表达式，因此可存在不同形式的真值表。x
+### 128 逻辑函数
+```
+一个逻辑函 可存在不同形式的 逻辑表达式，因此可存在 不同形式 的真值表。错
+```
 
-错
 129 逻辑函数
-逻辑函数输入变量的所有组态均对应一最小项。x
+```
+逻辑函数 输入变量 的 所有组态 均对应一最小项。 对
+```
 
-对
 130 逻辑函数
-任一逻辑函数均可变换为唯一的最小项之和表达式，称之为标准与－或表达式。x
+```
+任一逻辑函数均可变换为唯一的 最小项之和 表达式，称之为标准与－或表达式。 对
+```
 
-对
 131 逻辑函数的基本公式
-函数最简即表达式的项数最少，且每项中变量字母也最少。x
-因此最简函数是唯一的。
+```
+函数最简即表达式的项数最少，且每项中变量字母也最少。 
+因此最简函数是唯一的。 错
+```
 
-错
 132 逻辑函数的基本规则
-与非门是“万能门”,只用与非门就可实现任何数字系统。x
+```
+与非门 是“万能门”,只用 与非门 就可实现任何数字系统。 对
+```
 
-对
 133 逻辑函数的基本规则
-约束项就是逻辑函数中不会出现的变量取值组合，用卡诺图化简时，可将约束项当作1，也可当作0。x
+```
+约束项就是逻辑函数中不会出现的变量取值组合，用卡诺图化简时，可将约束项当作1，也可当作0。对
+```
 
-对
 134 逻辑函数的基本规则
-“或”门的逻辑表达式为F=A+B，当A和B都为“1”时，F则等于“0”。x
+```
+“或”门 的逻辑表达式为F=A+B，当A和B都为“1”时，F则等于“0”。错
+```
 
-错
 135 逻辑函数的基本规则
-虽然或非门与与非门对偶，但不能只用或非门实现任何数字系统。x
+```
+虽然 或非门 与 与非门 对偶，但不能只用 或非门 实现任何数字系统。错
+```
 
-错
-136 数字电路的特点
-热电偶的电压信号，温度变化时，电压随之改变，但它是数字信号。x
+### 136 数字电路的特点
+热电偶的电压信号，温度变化时，电压随之改变，但它是数字信号。 错
 
-错
-137 二极管与门电路
-二极管与门电路结构简单，但是有它的缺点，输出端对地接入负载时，负载电阻的改变会影响输出电平的高低。x
 
-对
+### 137 二极管与门电路
+二极管与门电路结构简单，但是有它的缺点，输出端对地接入负载时，负载电阻的改变会影响输出电平的高低。 对
+
+
 138 二极管或门电路
-二极管或门电路主要用于集成电路外部的逻辑单元。x
+二极管或门电路 主要用于 集成电路 外部的逻辑单元。 错
 
-错
+
 139 三极管非门电路(反相器)
-当输入为高电平时，应保证三极管工作在身饱和状态，以使输出电平接近于零，要保证三极管的基极电流小于深饱和时候的基极电流。x
+当输入为高电平时，应保证三极管工作在身饱和状态，以使输出电平接近于零，要保证三极管的基极电流小于深饱和时候的基极电流。 错
 
-错
-140 TTL集成门电路
-由于三极管的开关时间和分布电容的充放电过程，因而输入信号必须有足够的变化幅度和变化时间输出才能够变化。x
 
-对
+### 140 TTL集成门电路
+由于三极管的开关时间和分布电容的充放电过程，因而输入信号必须有足够的变化幅度和变化时间输出才能够变化。 对
+
+
 141 TTL与非门
-三极管截止、饱和时的集电极与发射极之间内阻相差很大。x
+三极管截止、饱和时的集电极与发射极之间内阻相差很大。 对
 
-对
+
 142 复合门电路
-与CMOS电路相比，TTL电路的主要优点是速度快。x
+与CMOS电路相比，TTL电路的主要优点是速度快。 对
 
-对
+
 143 三态门的作用
-三态门的作用就是为了提高电路的负载能力，使总线带负载能力有较大提高。x
+三态门的作用就是为了提高电路的负载能力，使总线带负载能力有较大提高。 对
 
-对
+
 144 TTL电路
-在TTL电路中通常规定高电平额定值为5V。x
+在TTL电路中通常规定高电平额定值为5V。 对
 
-对
+
 145 TTL电路OC门
-OC门就是集电极开路与非门，它的逻辑功能就是与逻辑。x
+OC门就是集电极开路与非门，它的逻辑功能就是与逻辑。对
 
-对
+
 146 TTL与非门
-TTL与非门的多余输入端可以接固定高电平。x
+TTL与非门的多余输入端可以接固定高电平。 对
 
-对
+
 147 TTL或非门
-TTL或非门的多余输入端电阻趋于无穷大时刻认为是逻辑高电平。x
+TTL或非门的多余输入端电阻趋于无穷大时刻认为是逻辑高电平。 对
 
-对
+
 148 TTL电路OC门
 采用“OC门”可提高电路的负载能力，它主要应用于灌电流负载。x
 
@@ -1370,16 +1359,17 @@ D触发器所需激励值与次态值永远相同，与现态值无关。x
 
 对
 210 555单稳态触发器
-积分型单稳态触发器在尖峰脉冲噪声下没有足够的触发脉冲宽度，与微分型单稳态触发器相比较，积分型单稳态触发器具有抗干扰能力强的优点。x
+积分型单稳态触发器在尖峰脉冲噪声下没有足够的触发脉冲宽度，与微分型单稳态触发器相比较，积分型单稳态触发器具有抗干扰能力强的优点。 对
 
-对
+
 
 ## 四、填空
-211 555单稳态触发器
+### 211 555单稳态触发器
 单稳态触发器是一种脉冲___电路，用555定时器组成的单稳态触发器其脉冲宽度≈___。
 
 整形， 1.1RC
-212 码制
+
+### 212 码制
 用二进制两个码元0、1按约定表示数和文字，称为___，代码所含位数为:
 ___。
 
@@ -1388,7 +1378,7 @@ ___。
 多位数码中每一位的构成方法以及从___的进位规则。 x
 
 从低位到高位
-214 逻辑代数
+### 214 逻辑代数
 “与非”门的简单逻辑功能是___，___。x
 
 “有0出1”，“全1出0”
@@ -1403,7 +1393,7 @@ ___。
 217 分立元件门电路
 分立元件门电路是用___和___构成的门电路。  x
 
-分立元器件，导线
+### 分立元器件，导线
 218 二极管与门电路
 门电路中的二极管和三极管经常工作在___状态。 x
 
@@ -1417,7 +1407,7 @@ ___，___，___。
 TTL三态门的输出有三种状态:
 高电平、低电平和___状态。  x
 
-高阻
+### 高阻
 221 三极管非门电路
 三极管非门实际上就是个反向器，加入了电阻和负电源是为了保证输入___电平时三极管可靠的截止。 x
 
@@ -1437,7 +1427,7 @@ TTL三态门的输出有三种状态:
 225 组合逻辑电路的定义
 组合逻辑电路在电路结构上，一般由___组成。 x
 
-门电路
+### 门电路
 226 编码器
 编码器任何时候只允许___编码信号输入，否则将发生混乱。 x
 
@@ -1519,7 +1509,7 @@ RS=0
 245 555单稳态触发器
 单稳态触发器的暂稳态通常都是由___来维持的。 x
 
-电容的充放电
+### 电容的充放电
 246 555单稳态触发器
 积分型单稳态触发器用___和___及___组成的。
 
@@ -1621,7 +1611,7 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案: 输出信号与输入信号之间存在 一定逻辑关系的 开关电路。
 ```
-264 TTL门电路
+### 264 TTL门电路
 题目: 什么是传输延时？影响TTL门和CMOS门传输延时的主要因素是什么？x
 
 ```
@@ -1660,7 +1650,7 @@ TTL与非门， 反相器， RC积分电路 x
 答案: 线或逻辑:指TTL门的输出端用连线并联在一起,构成的或逻辑。 
 三态门:逻辑门中除了逻辑0逻辑1两种逻辑状态外,还有第三种状态高阻状态的门电路。
 ```
-272 组合逻辑电路
+### 272 组合逻辑电路
 题目: 什么叫 组合逻辑电路？其特点是什么？x
 
 ```
@@ -1675,8 +1665,9 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案: 任意时刻的输出信号不仅取决于该时刻的输入信号，而且还取决于电路原来的状态，即与以前的输入信号有关。
 ```
-275 译码器
+### 275 译码器
 题目: 什么叫译码器？特点是什么？x
+
 ```
 答案: 将输入的二进制代码“翻译”成相对应的输出信号的电路。
 ```
@@ -1685,8 +1676,9 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案:  将被控对象或信号用特定的二进制代码来表示的电路。
 ```
-277 竞争
+### 277 竞争
 题目: 消除 竞争冒险 的方法一般有哪些？ x
+
 ```
 答案: 一般有三种。 1.修改逻辑设计； 2.引入选通脉冲； 3.在输出端接滤波电容。
 ```
@@ -1701,8 +1693,9 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案: 有竞争，但不一定都会有尖峰脉冲输出。如，在与门中，若低电平信号首先上升到高电平，则有尖峰脉冲发生，反之，则没有。
 ```
-280 触发器的结构特点 x
+### 280 触发器的结构特点 x
 题目: 简述触发器的结构特点。
+
 ```
 答案: 触发器能够存储一位二进制信号的基本单元电路。具有两个能自行保持的稳定状态，用来表示逻辑状态的0和1，或二进制数的1和0根据不同的输入信号可以置0或1在输入信号消失后，能将获得的新状态保存下来。
 ```
@@ -1755,13 +1748,14 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案: 因为时序电路中包含 组合电路 和 存储电路 两部分，所以竞争-冒险现象也包含两个方面。在 同步时序电路 中，由于所有触发器都在同一个时钟操作下动作，而在此之前每个触发器的输入信号均已经处于稳定状态，因而可以认为不存在竞争-冒险现象。一般认为竞争-毛象现象只存在于 异步时序逻辑电路 中。
 ```
-291 时序电路逻辑电路
+### 291 时序电路逻辑电路
 题目: 根据 记忆电路 中存储单元状态变化 的特点将 时序电路 分为哪几种？ x
+
 ```
 答案: 同步时序电路：所有存储电路中存储单元状态的变化都是在 同一时钟信号 操作下同时发生的。
 异步时序电路：存储单元状态的变化不是同时发生的。可能有公共的时钟信号，也可能没有公共的时钟信号。
 ```
-292 时序逻辑电路
+### 292 时序逻辑电路
 题目: 什么是时序图？ x
 
 ```
