--- a/SoftwareEngineering/模拟电路/40条简单易懂的模拟电路基础知识 .md
+++ b/SoftwareEngineering/模拟电路/40条简单易懂的模拟电路基础知识 .md
@@ -1,42 +1,44 @@
-1、 同相放大电路 加在两输入端的电压大小接近相等
+1、 **同相放大电路** 加在 两输入端的电压大小 接近相等
 
-2、 反相 放大电路的重要特征是“虚地”的概念
+2、 **反相 放大电路** 的重要特征是 “虚地” 的概念
 
-3、PN结具有一种很好的数学模型：开关模型-二极管诞生了，再来 一个PN结，三极管诞生了
+3、PN结具有一种很好的数学模型：**开关模型**-二极管诞生了，再来 **一个PN结**，三极管诞生了
 
-4、 高频电路中，必须考虑 PN结 电容的影响（正向偏置为 扩散电容，反相 偏置为 势垒电容）
+4、 高频电路中，必须考虑 PN结 电容的影响（正向偏置为 **扩散电容**，反相 偏置为 **势垒电容**）
 
-5、 点接触型 二极管 适用于 整流，面接触型二极管 适用于高频电路
+5、 **点接触型** 二极管 适用于 整流，**面接触型**二极管 适用于高频电路
 
 6、 硅管正向导 通压降0.7V,锗管为0.2V
 
-7、 齐纳二极管（稳压管）工作于反向击穿状态
+7、 **齐纳二极管**（稳压管）工作于 反向击穿状态
 
-8、 肖特基二极管（Schottky,SBD）适用于高频开关电路，正向压降和反相压降都很低（0.2V）但是反向击穿电压较低，漏电流也较大
+8、 **肖特基二极管**（Schottky,SBD）适用于高频开关电路，正向压降和反相压降都很低（0.2V）但是反向击穿电压较低，漏电流也较大
 
-9、 光电 二极管（将光信号转为电信号）
+9、 **光电 二极管**（将**光信号转为电信号**）
 
-10、二极管的主要参数：最大 整流电流，最大 反相电压，漏电流
+10、二极管的主要参数：最大 **整流电流**，最大  **反相电压**，**漏电流**
 
 11、 三极管有 发射极（浓度最高<需要发射电子（空穴）嘛，当然浓度高了>），集电极，基极（浓度最低）。箭头写在发射极上面<发射的东西当然需要箭头了！>
 
-12、发射极正偏，集电极反偏是让BJT工作在放大工作状态下的前提条件。三种连接方式：共基极，共发射极（最多，因为电流，电压，功率均可以放大），共集电极。判别三种组态的方法：共发射极，由基极输入，集电极输出；共集电极，由基极输入，发射极输出；共基极，由发射极输入，集电极输出。
+12、发射极正偏，集电极反偏是让BJT工作在放大工作状态下的前提条件。三种连接方式：**共基极**，**共发射极**（最多，因为电流，电压，功率均可以放大），**共集电极**。
 
-13、三极管主要参数：电流放大系数β，极间反向电流，（集电极最大允许电流，集电极最大允许耗散功率，反向击穿电压=3个重要极限参数决定BJT工作在安全区域）
+判别三种组态的方法：共发射极，由**基极输入，集电极输出**；共集电极，由**基极输入，发射极输出**；共基极，**由发射极输入，集电极输出**。
 
-14、三极管数学模型：单管 电流放大
+13、三极管主要参数：**电流放大系数β，极间反向电流**，（集电极最大允许电流，集电极最大允许耗散功率，反向击穿电压=3个重要极限参数决定BJT工作在安全区域）
 
-15、射极偏置电路：用于消除温度对静态工作点的影响（双电源更好）
+14、**三极管数学模型**：单管 电流放大
 
-16、三种BJT放大电路比较：共射级放大电路，电流、电压均可以放大。共集电极放大电路：只放大电流，跟随电压，输入R大，输出R小，用作输入级，输出级。共基极放大电路：只放大电压，跟随电流，高频特性好
+15、**射极偏置电路**：用于消除温度对静态工作点的影响（双电源更好）
 
-17、去耦电容：输出信号电容接地，滤掉信号的高频杂波。旁路电容：输入信号电容接地，滤掉信号的高频杂波。交流信号针对这两种电容处理为短路
+16、**三种BJT放大电路**比较：**共射级**放大电路，电流、电压均可以放大。**共集电极**放大电路：只放大电流，跟随电压，输入R大，输出R小，用作输入级，输出级。**共基极**放大电路：只放大电压，跟随电流，高频特性好
 
-18、BJT是一种 电流控制电流型器件（双极型），FET是一中电压控制电流器件（单极型）
+17、**去耦电容**：输出信号电容接地，滤掉信号的高频杂波。**旁路电容**：输入信号电容接地，滤掉信号的高频杂波。交流信号针对这两种电容处理为短路
+
+18、BJT是一种 **电流控制 电流型器件**（双极型），FET是一中 **电压控制 电流器件**（单极型）
 
 19、 主流是从发射极到集电极的IC，偏流就是从发射极到基极的Ib。相对与主电路而言，为基极提供电流的电路就是所谓的偏置电路。
 
-20、场效应管三个铝电极：栅极g，源极s，漏极d。分别对应三极管的基极b，发射极e，集电极c。<源极需要发射东西嘛，所以对应发射极e，栅极的英文名称是gate,门一样的存在，和基极的作用差不多>其中P型衬底一般与栅极g相连
+20、场效应管三个铝电极：**栅极g，源极s，漏极d**。分别对应三极管的基极b，发射极e，集电极c。<源极需要发射东西嘛，所以对应发射极e，栅极的英文名称是gate,门一样的存在，和基极的作用差不多>其中P型衬底一般与栅极g相连
 
 21、增强型FET必须依靠栅源电压Vgs才能起作用（开启电压Vt），耗尽型FET则不需要栅源电压，在正的Vds作用下，就有较大的漏极电流流向源极（如果加负的Vgs，那么可能出现夹断，此时的电压成为夹断电压Vp***重要特性***：可以在正负的栅源电压下工作）
 
@@ -44,38 +46,58 @@
 
 23、MOSFET主要参数：开启电压Vt，夹断电压Vp。极限参数：最大漏极电流Idm，最大耗散功率Pdm
 
-24、MOSFET三种放大电路：共源极放大电路（共射极），共漏极放大电路（共集电极），共栅极放大电路（共基极）
+24、MOSFET三种放大电路：**共源极**放大电路（共射极），**共漏极**放大电路（共集电极），**共栅极**放大电路（共基极）
 
-25、差分式放大电路：差模信号：两输入信号之差。共模信号：两输入信号之和除以2。由此：用差模与共模的定义表示两输入信号可得到一个重要的数学模型：任意一个输入信号=共模信号±差模信号/2
+25、差分式放大电路：
 
-26、差分式放大电路只放大差模信号，抑制共模信号。利用这个特性，可以很好的抑制温度等外界因素的变化对电路性能的影响。具体的性能指标：共模抑制比Kcmr
+**差模信号**：两输入信号之差。
 
-27、集成运放的温度漂移是漂移的主要来源
+**共模信号：**两输入信号之和除以2。
 
-28、集成运放的参数：最大输出电流，最大输出电压
+由此：用差模与共模的定义表示两输入信号可得到一个重要的数学模型：任意一个输入信号=共模信号±差模信号/2
+
+26、差分式 放大电路只放大差模信号，抑制共模信号。利用这个特性，可以很好的 抑制温度 等外界因素的变化对电路性能的影响。具体的性能指标：共模抑制比Kcmr
+
+27、集成运放的 **温度漂移** 是 漂移的主要来源
+
+28、**集成运放**的参数：最大输出电流，最大输出电压
 
 29、VCC是电路的供电电压, VDD是芯片的工作电压
 
-30、放大电路的干扰：1、将电源远离放大电路2、输入级屏蔽3、直流电源电压波动（采用稳压电源，输入和输出加上滤波电容）
+30、放大电路的干扰：
 
-31、负反馈放大电路的四种组态：电压串联负反馈（稳定输出电压），电压并联负反馈，电流串联负反馈（稳定输出电流），电流并联负反馈
+1、将电源远离 放大电路
 
-32、电压、电流反馈判定方法：输出短路法，设RL =
+2、输入级 屏蔽
 
-0，如果反馈信号不存在，为电压反馈，反之，则为电流反馈。
+3、直流电源电压波动（采用稳压电源，输入和输出加上滤波电容）
+
+31、负反馈放大电路的四种组态：**电压串联**负反馈（稳定输出电压），**电压并联**负反馈，**电流串联**负反馈（稳定输出电流），**电流并联**负反馈
+
+32、电压、电流反馈判定方法：输出短路法，设RL = 0，如果反馈 **信号不存在**，为电压反馈，反之，则为电流反馈。
 
 33、串联、并联反馈的判定方法：反馈信号与输入信号的求和方式，若为电压形式，则为串联反馈，若为电流形式，则为并联反馈
 
 34、功率放大电路的类别：甲类（全部）、甲乙类（50%以上）、乙类（50%）（按照输入信号在整个周期流经器件大于0的百分比）
 
-35、RC振荡电路适用于低频，LC振荡电路适用于高频电路
+35、**RC振荡电路** 适用于 低频，**LC振荡电路** 适用于 高频电路
 
 36、电压比较器，时滞比较器，集成电压比较器，方波产生电路，锯齿波产生电路
 
-37、直流稳压电源：电源变压器+整流电路+滤波电路+稳压电路
+37、**直流稳压电源**：电源变压器+整流电路+滤波电路+稳压电路
 
-38、滤波电路：利用电抗元件的储能作用，可以起到很好的滤波作用。电感（串联，大功率）和电容（并联，小功率）均可以起到平波的作用。
+38、**滤波电路**：利用电抗元件的储能作用，可以起到很好的滤波作用。
 
-39、开关稳压电源与线性电源：线性电源，效率低、发热强、但是输出很稳定。开关电源，效率高、发热一般、但输出纹波大，需要平波
+**电感（串联，大功率）**和 **电容（并联，小功率）**均可以起到平波的作用。
 
-40、开关稳压电源有降压和升压两种，降压中有续流二极管，LC滤波电路。升压中有电感，稳压二极管，电容
+39、开关 稳压电源  与 线性电源：
+
+**线性电源**，效率低、发热强、但是输出很稳定。
+
+**开关电源**，效率高、发热一般、但输出纹波大，需要平波
+
+40、开关稳压电源有 ss 降压和升压 两种，
+
+降压中有 **续流二极管，LC滤波电路**。
+
+升压中有 **电感，稳压二极管，电容**
